/* Verb */ trans/intrans tags <cut#13473949>

--- a/en/c/cut.6843.wikitext
+++ b/en/c/cut.6843.wikitext
@@ -254,23 +254,23 @@ From {{etyl|enm}} {{term|cutten|cutten, kytten|to cut|lang=enm}}, (compare {{ety
 ===Verb===
 {{en-verb|cuts|cutting|cut}}
 
-# To [[perform]] an [[incision]], for example with a [[knife]].
+# {{transitive}} To [[perform]] an [[incision]] on, for example with a [[knife]].
 #: ''I '''cut''' the skin on my arm.''
-# To [[divide]] with a [[knife]], [[scissors]], or another [[sharp]] [[instrument]].
+# {{transitive}} To [[divide]] with a [[knife]], [[scissors]], or another [[sharp]] [[instrument]].
 #: ''Would you please '''cut''' the cake?''
-# To [[separate]] from [[prior]] [[association]]; to remove a portion of a [[recording]] during [[editing]].
+# {{transitive}} To [[separate]] from [[prior]] [[association]]; to remove a portion of a [[recording]] during [[editing]].
 #: ''Travis was '''cut''' from the team.''
-# {{computing}} To [[remove]] and place in [[memory]] for later use.
+# {{transitive|computing}} To [[remove]] and place in [[memory]] for later use.
 #: ''Select the text, '''cut''' it, and then paste it in the other application.''
-# To [[enter]] a [[queue]] in the wrong place.
+# {{intransitive}} To [[enter]] a [[queue]] in the wrong place.
 #: ''One student kept trying to '''cut''' in front of the line.''
-# {{context|cinema, audio}} To [[cease]] [[record]]ing activities.
+# {{intransitive|cinema|audio|usually as imperative}} To [[cease]] [[record]]ing activities.
 #: ''After the actors read their lines, the director yelled "'''Cut'''!"''
-# To [[reduce]], especially intentionally.
+# {{transitive}} To [[reduce]], especially intentionally.
 #: ''They're going to '''cut''' salaries by fifteen percent.''
-# To [[form]] or [[shape]] by cutting.
+# {{transitive}} To [[form]] or [[shape]] by cutting.
 #: ''I have three diamonds to '''cut''' today.''
-# To [[intersect]] or [[cross]] in such a way as to [[divide]] in [[half]] or nearly so.
+# {{intransitive}} To [[intersect]] or [[cross]] in such a way as to [[divide]] in [[half]] or nearly so.
 #: ''This road '''cuts''' right through downtown.''
 #* {{quote-news
 |year=2011
@@ -281,18 +281,18 @@ From {{etyl|enm}} {{term|cutten|cutten, kytten|to cut|lang=enm}}, (compare {{ety
 |url=http://www.guardian.co.uk/football/2011/jan/18/manchester-city-leicester-city-fa-cup
 |page=
 |passage=Leicester's response was swift although the referee, Mark Halsey, was generous in the extreme when he awarded the penalty from which Paul Gallagher made it 1-1. Neither Joleon Lescott nor Vieira appeared to make any contact with Dyer as he '''cut''' between them.}}
-# {{cricket}} To make the ball spin sideways by running one's [[finger]]s down the side of the ball while bowling it.
-# {{informal}} To not [[attend]] a [[class]], especially when not [[permit]]ted.
+# {{transitive|cricket}} To make the ball spin sideways by running one's [[finger]]s down the side of the ball while bowling it. {{rfex}}
+# {{transitive|informal}} To not [[attend]] a [[class]], especially when not [[permit]]ted.
 #: ''I '''cut''' fifth period to hang out with Angela.''
-# To change [[direction]] suddenly.
+# {{intransitive}} To change [[direction]] suddenly.
 #: ''The football player '''cut''' to his left to evade a tackle.''
-# To [[divide]] a [[pack]] of [[playing card]]s into two
+# {{transitive|intransitive}} To [[divide]] a [[pack]] of [[playing card]]s into two
 #: ''If you '''cut''' then I'll deal.''
-# {{slang}} To [[dilute]] a liquid, usually [[alcohol]].
+# {{transitive|slang}} To [[dilute]] a liquid, usually [[alcohol]].
 #: ''The bartender '''cuts''' his beer to save money and now it's all watery.''
-# {{dated}} To [[ignore]] as a social [[snub]].
+# {{transitive|dated}} To [[ignore]] as a social [[snub]].
 #: ''After the incident at the dinner party, people started to '''cut''' him on the street.''
-# {{slang|transitive}} To [[stab]] (a person).
+# {{transitive|slang}} To [[wound]] with a knife.
 #* '''1990''', Stephen Dobyns, ''The house on Alexandrine''
 #*: We don't want your money no more. We just going to '''cut''' you.
 # {{rfdef|lang=en}}
