--- a/en/傑/傑.11170.wikitext
+++ b/en/傑/傑.11170.wikitext
@@ -37,6 +37,13 @@
 * [[傑出]]
 * [[傑物]]
 
+===Proper noun===
+{{ja-pos|k|proper|hira=すぐる|rom=Suguru}}
+
+# {{given name|male|lang=ja}}
+
+[[Category:Japanese male given names|すぐる]]
+
 ----
 
 ==Korean==
