t+bg:[[фуста]] ([[WT:EDIT|Assisted]]) <skirt#13495406>

--- a/en/s/skirt.7203.wikitext
+++ b/en/s/skirt.7203.wikitext
@@ -132,6 +132,7 @@ From {{etyl|non|en}} {{term|skyrta|lang=non}}, from {{proto|Germanic|skurtijōn|
 
 {{trans-top|slang for woman}}
 * Bosnian: {{t-|bs|žena|f}}
+* Bulgarian: {{t|bg|фуста|f|tr=fústa|sc=Cyrl}}
 * Croatian: {{t+|hr|žena|f|alt=žèna}}
 * Czech: [[ženská]] {{f}}
 * Finnish: {{t+|fi|hame}}
