--- a/en/昭/昭.16981.wikitext
+++ b/en/昭/昭.16981.wikitext
@@ -33,6 +33,13 @@
 ====Readings====
 * {{ja-readings|on=[[しょう]] (shō)|kun=[[あきらか]] (akiraka)}}
 
+===Proper noun===
+{{ja-pos|k|proper|hira=あきら|rom=Akira}}
+
+# {{given name|male|lang=ja}}
+
+[[Category:Japanese male given names|あきら]]
+
 ----
 
 ==Korean==
