--- a/en/c/curtain.7391.wikitext
+++ b/en/c/curtain.7391.wikitext
@@ -54,6 +54,7 @@ From {{etyl|fro}} {{term|cortine}}, from {{etyl|la}} {{term|cortina}}.
 {{trans-mid}}
 * Latvian: {{t|lv|aizkars|m|xs=Latvian}}
 * Lithuanian: {{t|lt|užuolaida|f|xs=Lithuanian}}
+* [[Luxembourgish]]: {{t|lb|Rido|f}}
 * [[Macedonian]]: {{t-|mk|завеса|f|tr=závesa}},  {{t|mk|перде|n|tr=pérde}}
 * Persian: {{t+|fa|پرده|tr=parde|xs=Persian}}
 * Polish: {{t|pl|zasłona|f}}
