--- a/en/f/fight.6879.wikitext
+++ b/en/f/fight.6879.wikitext
@@ -8,7 +8,7 @@
 [[Image:Adriaen_Brouwer,_Bauernrauferei_beim_Kartenspiel_(c._1630–1640).jpg|thumb|Fight ([[brawl]])]]
 
 ===Etymology 1===
-From {{etyl|enm}} {{term|fighten|lang=enm}}, from {{etyl|ang}} {{term|feohtan||to fight, combat, strive|lang=ang}}, from {{proto|Germanic|fehtanan|to comb, tease, shear|lang=en}}, from {{proto|Indo-European|peḱ-|to comb, shear|lang=en}}. Cognate with {{etyl|sco|-}} {{term|fecht||to fight|lang=sco}}, {{etyl|fy|-}} {{term|fjochtsje|lang=fy}}, {{term|fjuchte||to fight|lang=fy}}, Dutch {{term|vechten||to fight|lang=nl}}, German {{term|fechten||to fight, fence|lang=de}}, {{etyl|la|-}} {{term|pecto|pectō|comb, thrash|pos=verb|lang=la}},  {{etyl|grc|-}} {{term|πέκω||tr=pékō|comb or card wool|pos=verb|lang=grc}}. Related also to {{etyl|ang|-}} {{term|feht||wool, shaggy pelt, fleece|lang=ang}}.
+From {{etyl|enm}} {{term|fighten|lang=enm}}, from {{etyl|ang}} {{term|feohtan||to fight, combat, strive|lang=ang}}, from {{proto|Germanic|fehtanan|to comb, tease, shear|lang=en}}, from {{proto|Indo-European|peḱ-|to comb, shear|lang=en}}. Cognate with {{etyl|sco|-}} {{term|fecht||to fight|lang=sco}}, {{etyl|fy|-}} {{term|fjochtsje|lang=fy}}, {{term|fjuchte||to fight|lang=fy}}, Dutch {{term|vechten||to fight|lang=nl}}, Low German {{term|fechten||to fight|lang=nds}}, German {{term|fechten||to fight, fence|lang=de}}, {{etyl|la|-}} {{term|pecto|pectō|comb, thrash|pos=verb|lang=la}},  {{etyl|grc|-}} {{term|πέκω||tr=pékō|comb or card wool|pos=verb|lang=grc}}. Related also to {{etyl|ang|-}} {{term|feht||wool, shaggy pelt, fleece|lang=ang}}.
 
 ====Verb====
 {{en-verb|fights|fighting|fought|'''[[fought]]''' ''or'' {{qualifier|archaic}} '''[[foughten]]'''}}
