--- a/en/b/bridge.7389.wikitext
+++ b/en/b/bridge.7389.wikitext
@@ -66,6 +66,7 @@ If a man made structure is wider than it is long then it is probably a [[bridge]
 * Arabic: {{t|ar|جسر|m|tr=jisr|sc=Arab}}, 
 *: [[Egyptian Arabic]]: {{tø|arz|كوبري|m|tr=kobri|sc=Arab}}
 * Armenian: {{t+|hy|կամուրջ|tr=kamurǰ}}
+* [[Asturian]]: {{t|ast|ponte|f}}
 * [[Azeri]]: {{t+|az|körpü|xs=Azeri}}
 * [[Basque]]: {{t-|eu|zubi|xs=Basque}}
 * Belarusian: {{t-|be|мост|m|tr=most|xs=Belarusian}}
