--- a/en/g/Germany.2103.wikitext
+++ b/en/g/Germany.2103.wikitext
@@ -89,6 +89,8 @@ From {{etyl|la}} {{term|Germania|lang=la}}, likely of Gallic origin
 * Mongolian: {{t-|mn|Герман|tr=Germán|sc=Cyrl|xs=Mongolian}}
 * [[Nahuatl]]: {{t|nah|Teutontlālpan}}
 * Navajo: {{tø|nv|Béésh Bichʼahii bikéyah}}
+* North Frisian:
+*: Amrum: {{tø|frr|Sjiisklun}}
 * Norwegian: {{t|no|Tyskland}}, {{t|no|Føderale Republikken Tyskland}}
 * [[Old English]]: {{t-|ang|Þeodiscland|n|alt=Þēodiscland|xs=Old English}}
 * [[Old French]]: {{tø|fro|Alemaigne|f}}
