--- a/en/g/Germany.2103.wikitext
+++ b/en/g/Germany.2103.wikitext
@@ -91,6 +91,7 @@ From {{etyl|la}} {{term|Germania|lang=la}}, likely of Gallic origin
 * Navajo: {{tø|nv|Béésh Bichʼahii bikéyah}}
 * North Frisian:
 *: Amrum: {{tø|frr|Sjiisklun}}
+*: Mooring: {{tø|frr|Tjüschlönj}}
 * Norwegian: {{t|no|Tyskland}}, {{t|no|Føderale Republikken Tyskland}}
 * [[Old English]]: {{t-|ang|Þeodiscland|n|alt=Þēodiscland|xs=Old English}}
 * [[Old French]]: {{tø|fro|Alemaigne|f}}
