--- a/en/f/France.2105.wikitext
+++ b/en/f/France.2105.wikitext
@@ -85,7 +85,7 @@ From {{etyl|fr}} {{term|France|lang=fr}}, {{etyl|fro}} {{term|France|lang=fro}},
 * [[Khmer]]: {{t|km|បារាំង|sc=Khmr}}
 * [[Kikuyu]]: {{tø|ki|Frans}}
 * Korean: {{t+|ko|프랑스|tr=Peurangseu|sc=Hang}}
-* Kurdish: {{ku-Arab|[[فه‌ره‌نسا]]}}
+* Kurdish: {{ku-Arab|[[فه‌ره‌نسا]]}}, {{t|ku|فه‌ره‌نسا|sc=ku-Arab}}
 * [[Lao]]: {{t|lo|ປະເທດຝະລັ່ງ|sc=Laoo|xs=Lao}}
 {{trans-mid}}
 * Latin: {{t+|la|Gallia|f}}, {{t+|la|Francia}}
