--- a/en/f/France.2105.wikitext
+++ b/en/f/France.2105.wikitext
@@ -87,8 +87,8 @@ From {{etyl|fr}} {{term|France|lang=fr}}, {{etyl|fro}} {{term|France|lang=fro}},
 * Korean: {{t+|ko|프랑스|tr=Peurangseu|sc=Hang}}
 * Kurdish: {{ku-Arab|[[فه‌ره‌نسا]]}}, {{t|ku|فه‌ره‌نسا|sc=ku-Arab}}
 * [[Lao]]: {{t|lo|ປະເທດຝະລັ່ງ|sc=Laoo|xs=Lao}}
-{{trans-mid}}
 * Latin: {{t+|la|Gallia|f}}, {{t+|la|Francia}}
+{{trans-mid}}
 * Latvian: {{t+|lv|Francija|f|xs=Latvian}}
 * [[Limburgish]]: [[Frankriek]]
 * Lithuanian: {{t+|lt|Prancūzija|xs=Lithuanian}}
@@ -113,6 +113,7 @@ From {{etyl|fr}} {{term|France|lang=fr}}, {{etyl|fro}} {{term|France|lang=fro}},
 * [[Occitan]]: [[França]]
 * [[Old English]]: [[Francland]]
 * [[Ossetian]]: [[Франц]] (Frants)
+* [[Pashto]]: {{t|ps|فرانسه|sc=ps-Arab}}
 * Persian: {{t+|fa|فرانسه|tr=frânse|xs=Persian}}
 * Polish: {{t+|pl|Francja|f}}
 * Portuguese: {{t+|pt|França|f}}
