--- a/en/f/France.2105.wikitext
+++ b/en/f/France.2105.wikitext
@@ -38,7 +38,7 @@ From {{etyl|fr}} {{term|France|lang=fr}}, {{etyl|fro}} {{term|France|lang=fro}},
 * [[Asturian]]: [[Francia]] {{f}}
 * [[Basque]]: [[Frantzia]]
 * Belarusian: {{t|be|Францыя|f|tr=Fráncyja|xs=Belarusian}}
-* Bengali: {{t-|bn|ফ্রান্স}}, {{t|bn|ফ্রান্স|tr=phrans|sc=Beng}}
+* Bengali: {{t|bn|ফ্রান্স|tr=phrans|sc=Beng}}
 * Bosnian: {{t-|bs|Francuska|f}}
 * [[Breton]]: [[Frañs]] ''(state)'', [[Bro-C'hall]] ''(country)''
 * Bulgarian: {{t+|bg|Франция|f|tr=Fráncija}}
@@ -65,10 +65,10 @@ From {{etyl|fr}} {{term|France|lang=fr}}, {{etyl|fro}} {{term|France|lang=fro}},
 * Georgian: {{t-|ka|საფრანგეთი|tr=sap‘ranget‘i|sc=Geor|xs=Georgian}}
 * German: {{t+|de|Frankreich|n}}
 * Greek: {{t+|el|Γαλλία|f|tr=Gallía}}
-* [[Gujarati]]: {{t|gu|ફ્રાન્સ|sc=Gujr|xs=Gujarati}}, {{t|gu|ફ્રાન્સ|tr=phrāns|sc=Gujr}}
+* [[Gujarati]]: {{t|gu|ફ્રાન્સ|tr=phrāns|sc=Gujr}}
 * [[Haitian Creole]]: [[Frans]]
 * Hebrew: {{t+|he|צרפת|f|alt=צָרְפַת|tr=tsarfat}} (''classical:'' Ṣārəphath)
-* Hindi: {{t|hi|फ़्रांस|tr=frāns|xs=Hindi}}, {{t|hi|फ़्राँस|tr=frām̐s|xs=Hindi}} <!-- ??? -->, {{t|hi|फ़्रान्स|m|tr=fraansa|sc=Deva}}
+* Hindi: {{t|hi|फ़्रांस|tr=frāns|xs=Hindi}}, {{t|hi|फ़्राँस|tr=frāns|xs=Hindi}}, {{t|hi|फ़्रान्स|m|tr=frāns|sc=Deva}}
 * Hungarian: {{t+|hu|Franciaország}}
 * Icelandic: {{t+|is|Frakkland|n}}
 * [[Ido]]: [[Francia]]
@@ -79,13 +79,13 @@ From {{etyl|fr}} {{term|France|lang=fr}}, {{etyl|fro}} {{term|France|lang=fro}},
 * Japanese: {{t+|ja|フランス|tr=Furánsu}}, {{t-|ja|仏蘭西|tr=Furánsu}} {{qualifier|obsolete}}
 * [[Kalenjin]]: {{tø|kln|Frans}}
 * [[Kamba]]: {{tø|kam|Frans}}
-* [[Kannada]]: [[ಪ್ರಾಂಸ್]], {{t|kn|ಪ್ರಾಂಸ್|tr=prāns|sc=Knda}}
+* [[Kannada]]: {{t|kn|ಪ್ರಾಂಸ್|tr=prāns|sc=Knda}}
 * [[Kashmiri]]: {{t|ks|फ्रांस|sc=ks-Arab|xs=Kashmiri}}
 * Kazakh: {{t|kk|Франция|tr=Frantsiya|sc=Cyrl}}
 * [[Khmer]]: {{t|km|បារាំង|sc=Khmr}}
 * [[Kikuyu]]: {{tø|ki|Frans}}
 * Korean: {{t+|ko|프랑스|tr=Peurangseu|sc=Hang}}
-* Kurdish: {{ku-Arab|[[فه‌ره‌نسا]]}}, {{t|ku|فه‌ره‌نسا|sc=ku-Arab}}
+* Kurdish: {{t|ku|فه‌ره‌نسا|sc=ku-Arab}}
 * [[Lao]]: {{t|lo|ປະເທດຝະລັ່ງ|sc=Laoo|xs=Lao}}
 * Latin: {{t+|la|Gallia|f}}, {{t+|la|Francia}}
 {{trans-mid}}
@@ -102,7 +102,7 @@ From {{etyl|fr}} {{term|France|lang=fr}}, {{etyl|fro}} {{term|France|lang=fro}},
 * Malay: {{t-|ms|Perancis|xs=Malay}}
 * [[Malayalam]]: {{t|ml|ഫ്രാൻസ്|sc=Mlym}}
 * Maltese: {{t-|mt|Franza|xs=Maltese}}
-* [[Marathi]]: {{t|mr|फ्रांस|sc=Deva|xs=Marathi}}
+* [[Marathi]]: {{t|mr|फ्रांस|tr=phrāns|sc=Deva|xs=Marathi}}
 * [[Meru]]: {{tø|mer|Frans}}
 * Mongolian: {{t|mn|Франц|tr=Frants|sc=Cyrl|xs=Mongolian}}, {{t|mn|Франц улс|tr=Frants uls|sc=Cyrl|xs=Mongolian}}
 * [[Nauruan]]: {{t-|na|France|xs=Nauruan}}
@@ -114,13 +114,13 @@ From {{etyl|fr}} {{term|France|lang=fr}}, {{etyl|fro}} {{term|France|lang=fro}},
 * [[Old English]]: [[Francland]]
 * [[Ossetian]]: [[Франц]] (Frants)
 * [[Pashto]]: {{t|ps|فرانسه|sc=ps-Arab}}
-* Persian: {{t+|fa|فرانسه|tr=frânse|xs=Persian}}
+* Persian: {{t+|fa|فرانسه|tr=Frânse|xs=Persian}}
 * Polish: {{t+|pl|Francja|f}}
 * Portuguese: {{t+|pt|França|f}}
 * Romanian: {{t+|ro|Franța|f}}
 * [[Romansch]]: [[Frantscha]]
 * Russian: {{t+|ru|Франция|f|tr=Fráncija}}
-* Sanskrit: {{t|sa|फ्रांस|xs=Sanskrit}}
+* Sanskrit: {{t|sa|फ्रांस|tr=phrānsa|xs=Sanskrit}}
 * [[Sardinian]]: [[Frantza]]
 * [[Scots]]: [[Franse]]
 * [[Scottish Gaelic]]: An [[Fraing|Fhraing]]
@@ -135,7 +135,7 @@ From {{etyl|fr}} {{term|France|lang=fr}}, {{etyl|fro}} {{term|France|lang=fro}},
 * Spanish: {{t+|es|Francia|f}}
 * Swahili: {{t+|sw|Ufaransa|xs=Swahili}}
 * Swedish: {{t+|sv|Frankrike}}
-* [[Tagalog]]: [[Pransya]], {{t|tl|Pransya}}
+* [[Tagalog]]: {{t|tl|Pransya}}
 * [[Tajik]]: {{t|tg|Фаронса|tr=Faronsa|sc=Cyrl}}
 * [[Tamil]]: {{t|ta|பிரான்ஸ்|tr=pirāns|xs=Tamil}}
 * [[Telugu]]: {{t|te|ఫ్రాన్స్|sc=Telu}}
