--- a/en/f/France.2105.wikitext
+++ b/en/f/France.2105.wikitext
@@ -36,6 +36,7 @@ From {{etyl|fr}} {{term|France|lang=fr}}, {{etyl|fro}} {{term|France|lang=fro}},
 * [[Aragonese]]: [[Franzia]] {{f}}
 * Armenian: {{t+|hy|Ֆրանսիա|tr=Fransia}}
 * [[Asturian]]: [[Francia]] {{f}}
+* [[Azeri]]: {{t|az|Fransa}}
 * [[Basque]]: [[Frantzia]]
 * Belarusian: {{t|be|Францыя|f|tr=Fráncyja|xs=Belarusian}}
 * Bengali: {{t|bn|ফ্রান্স|tr=phrans|sc=Beng}}
@@ -87,8 +88,8 @@ From {{etyl|fr}} {{term|France|lang=fr}}, {{etyl|fro}} {{term|France|lang=fro}},
 * Korean: {{t+|ko|프랑스|tr=Peurangseu|sc=Hang}}
 * Kurdish: {{t|ku|فه‌ره‌نسا|sc=ku-Arab}}
 * [[Lao]]: {{t|lo|ປະເທດຝະລັ່ງ|sc=Laoo|xs=Lao}}
-* Latin: {{t+|la|Gallia|f}}, {{t+|la|Francia}}
 {{trans-mid}}
+* Latin: {{t+|la|Gallia|f}}, {{t+|la|Francia}}
 * Latvian: {{t+|lv|Francija|f|xs=Latvian}}
 * [[Limburgish]]: [[Frankriek]]
 * Lithuanian: {{t+|lt|Prancūzija|xs=Lithuanian}}
