--- a/en/g/Germany.2103.wikitext
+++ b/en/g/Germany.2103.wikitext
@@ -24,7 +24,8 @@ From {{etyl|la}} {{term|Germania|lang=la}}, likely of Gallic origin
 ====Translations====
 {{trans-top|Germany}}
 * [[Acehnese]]: {{tø|ace|Jeureuman}}
-* [[Afrikaans]]: [[Duitsland]]
+* [[Afrikaans]]: [[Duitsland]], {{t|af|Duitsland}}
+* Albanian: {{t|sq|Gjermania}}
 * [[Amharic]]: {{t|am|ᎠᏛᏥ|sc=Ethi}}
 * Arabic: {{t+|ar|ألمانيا|f|tr='almaanya}}
 * Armenian: {{t+|hy|Գերմանիա|tr=Germania}}
@@ -69,14 +70,15 @@ From {{etyl|la}} {{term|Germania|lang=la}}, likely of Gallic origin
 * Italian: {{t+|it|Germania|f}}
 * Japanese: {{t+|ja|ドイツ|tr=Doitsu}}, {{t+|ja|独逸|tr=Doitsu}} {{qualifier|obsolete}}
 * [[Kannada]]: {{t-|kn|ಜರ್ಮನಿ|tr=jarmani|sc=Knda|xs=Kannada}}
+* Kazakh: {{t|kk|Германия|tr=Germaniya|sc=Cyrl}}
 * [[Khmer]]: {{t|km|ប្រទេស​អាឡឺម៉ង់|tr=bprədtēh āleumong|sc=Khmr}}
 * Korean: {{t+|ko|독일|tr=Dogil|sc=Hang}} ({{t|ko|獨逸|sc=Hani}}); {{t|ko|도이췰란드|tr=Doichwillandeu|sc=Hang}} (''North Korea'')
 * [[Lao]]: {{t|lo|ປະເທດເຢັຽລະມັນ|sc=Laoo}}
 * [[Latgalian]]: {{tø|ltg|Vuoceja|f}}
 * Latin: {{t+|la|Germania|f}}
 * Latvian: {{t+|lv|Vācija|f|xs=Latvian}}
-{{trans-mid}}
 * Lithuanian: {{t+|lt|Vokietija|f|xs=Lithuanian}}
+{{trans-mid}}
 * [[Livonian]]: [[Saksāmō]]
 * [[Luhya]]: {{tø|luy|Jamani}}
 * [[Luxembourgish]]: [[Däitschland]] {{n}}
@@ -115,6 +117,7 @@ From {{etyl|la}} {{term|Germania|lang=la}}, likely of Gallic origin
 * Spanish: {{t+|es|Alemania|f}}
 * Swahili: [[Ujerumani]] ''(noun 6)'', {{t+|sw|Ujerumani|xs=Swahili}}
 * Swedish: {{t+|sv|Tyskland}}
+* [[Tagalog]]: {{t|tl|Alemanya}}
 * [[Tajik]]: {{t|tg|Олмон|tr=Olmon|sc=Cyrl}}
 * [[Tamil]]: {{t|ta|ஜர்மனி|tr=jarmani|xs=Tamil}}
 * [[Telugu]]: {{t|te|జర్మని|tr=jarmani}}
