--- a/en/s/secretary.7224.wikitext
+++ b/en/s/secretary.7224.wikitext
@@ -13,12 +13,12 @@ From {{etyl|ML.}} {{term|lang=la|secretarius||one entrusted with secrets}} < {{e
 {{wikipedia}}
 {{en-noun|secretaries}}
 
-# {{obsolete}} Someone entrusted with a [[secret]].
+# {{obsolete}} Someone entrusted with a [[secret]]; a [[confidant]].
 # A person who keeps [[records]], takes [[notes]] and handles general [[clerical]] work.
-# The [[head]] of a [[department]] of [[government]].
+#(''often capitalized'') The [[head]] of a [[department]] of [[government]].
 # A managerial or leading position in certain non-profit organizations, such as political parties, trade unions, international organizations.
 #: ''Ban Ki-Moon is the current secretary general of the United Nations.''
-# A type of [[desk]].
+#{{US}} A type of [[desk]]; a [[secretaire]].
 # A species of [[bird]]; ''Sagittarius serpentarius''.
 
 ====Derived terms====
