--- a/en/f/France.2105.wikitext
+++ b/en/f/France.2105.wikitext
@@ -83,7 +83,7 @@ From {{etyl|fr}} {{term|France|lang=fr}}, {{etyl|fro}} {{term|France|lang=fro}},
 * [[Kannada]]: {{t|kn|ಪ್ರಾಂಸ್|tr=prāns|sc=Knda}}
 * [[Kashmiri]]: {{t|ks|फ्रांस|sc=ks-Arab|xs=Kashmiri}}
 * Kazakh: {{t|kk|Франция|tr=Frantsiya|sc=Cyrl}}
-* [[Khmer]]: {{t|km|បារាំង|sc=Khmr}}, {{t|km|ប្រទេសបារាំង|sc=Khmr}}
+* [[Khmer]]: {{t|km|បារាំង|sc=Khmr|tr=baarang}}, {{t|km|ប្រទេសបារាំង|sc=Khmr|tr=prɑteih baarang}}
 * [[Kikuyu]]: {{tø|ki|Frans}}
 * Korean: {{t+|ko|프랑스|tr=Peurangseu|sc=Hang}}
 * Kurdish: {{t|ku|فه‌ره‌نسا|sc=ku-Arab}}
