--- a/en/b/blond.6878.wikitext
+++ b/en/b/blond.6878.wikitext
@@ -1,5 +1,5 @@
 ==English==
-
+{{rfc|this is not consistent with either the entry for "blonde" or the usage facts in the US for which blond is more common and is often used in a gender-neutral way}}
 ===Alternative forms===
 * [[blonde]] (US)
 
