--- a/en/f/felt.6877.wikitext
+++ b/en/f/felt.6877.wikitext
@@ -36,6 +36,7 @@
 * French: {{t+|fr|feutre|m}}, {{t+|fr|feutrine|f}}
 {{trans-mid}}
 * German: {{t+|de|Filz|n}}
+* Greek: {{t|el|κετσές|m|tr=ketsés|sc=Grek}}
 * Hebrew: {{t+|he|לבד|m|tr=léved}}
 * [[Ido]]: {{t+|io|felto|xs=Ido}}
 * Italian: {{t+|it|feltro|m}}
