--- a/en/n/New Zealand.2106.wikitext
+++ b/en/n/New Zealand.2106.wikitext
@@ -48,6 +48,7 @@ From {{etyl|nl}} ''[[Nieuw-Zeeland]]'', "new Zeeland", after the Dutch settlemen
 * Japanese: {{t-|ja|ニュージーランド|tr=Nyūjīrando}}
 * [[Kalenjin]]: {{tø|kln|Nyuziland}}
 * [[Kamba]]: {{tø|kam|Nyuziland}}
+* {{trreq|Khmer}}
 {{trans-mid}}
 * [[Kikuyu]]: {{tø|ki|Nyuziland}}
 * Korean: {{t+|ko|뉴질랜드|tr=Nyujillaendeu|sc=Hang}}
