--- a/en/慄/慄.15703.wikitext
+++ b/en/慄/慄.15703.wikitext
@@ -1,4 +1,5 @@
-{{also|栗}} (different character in Japan)
+{{xsee|[[栗]]''' (different character in Japan)''' }}
+
 ==Translingual==
 
 ===Han character===
