Reverted edits by [[Special:Contributions/New Zealand man|New Zealand man]] ([[User_talk:New Zealand man|Talk]]); changed back to last version by [[User:Stephen G. Brown|Stephen G. Brown]] <New Zealand#13572443>

--- a/en/n/New Zealand.2106.wikitext
+++ b/en/n/New Zealand.2106.wikitext
@@ -140,6 +140,7 @@ From {{etyl|nl}} ''[[Nieuw-Zeeland]]'', "new Zeeland", after the Dutch settlemen
 [[cy:New Zealand]]
 [[de:New Zealand]]
 [[et:New Zealand]]
+[[el:New Zealand]]
 [[es:New Zealand]]
 [[fr:New Zealand]]
 [[fy:New Zealand]]
