--- a/en/c/cost.6840.wikitext
+++ b/en/c/cost.6840.wikitext
@@ -17,7 +17,7 @@ From {{etyl|fro}} {{term|coster|lang=fro}} (modern: {{term|coûter|lang=fr}}).
 # Amount of [[money]], time, etc. that is [[required]] or used.
 #: ''The total '''cost''' of the new complex was an estimated $1.5 million.''
 #: ''We have to cut '''costs''' if we want to avoid bankrupcy.''
-#: ''The average '''cost''' of a new house is twice as much as it was 20 years ago.''
+#: ''The average '''cost''' of a new house is twice as much as t was 20 years ago.''
 # A negative [[consequence]] or loss that occurs or is required to occur.
 #: ''There were many '''costs''' to the development project, the least of all was the financial aspect.''
 #: ''If you train all the time, there will be a few '''costs''' such as a lack of free time.''
@@ -121,9 +121,9 @@ From {{etyl|fro}} {{term|coster|lang=fro}} (modern: {{term|coûter|lang=fr}}).
 {{en-verb|costs|costing|'''[[cost]]''' or '''[[costed]]'''}}
 
 # To [[incur]] a [[charge]], a [[price]].
-#: ''This shirt '''cost''' $50, while this is cheaper at only $30.''
+#: ''This shirt '''costs''' $50, while this is cheaper at only $30.''
 #: ''It will '''cost''' you a lot of money to take a round-the-world trip.''
-#: ''Entry to the museums used to be free, but now it '''cost''' 5 pounds.''
+#: ''Entry to the museums used to be free, but now it '''costs''' 5 pounds.''
 # To cause something to be lost.
 #: ''Trying to rescue the man from the frozen lake '''cost''' me my health.''
 # To [[calculate]] or [[estimate]] a value.
