--- a/en/c/cost.6840.wikitext
+++ b/en/c/cost.6840.wikitext
@@ -118,7 +118,7 @@ From {{etyl|fro}} {{term|coster|lang=fro}} (modern: {{term|coûter|lang=fr}}).
 {{trans-bottom}}
 
 ===Verb===
-{{en-verb|costs|costing|'''[[cost]]''' or '''[[cost]]'''}}
+{{en-verb|cost|costing|'''[[cost]]''' }}
 
 # To [[incur]] a [[charge]], a [[price]].
 #: ''This shirt '''costs''' $50, while this is cheaper at only $30.''
