--- a/en/c/cost.6840.wikitext
+++ b/en/c/cost.6840.wikitext
@@ -121,7 +121,7 @@ From {{etyl|fro}} {{term|coster|lang=fro}} (modern: {{term|coûter|lang=fr}}).
 {{en-verb|cost|costing|'''[[cost]]''' }}
 
 # To [[incur]] a [[charge]], a [[price]].
-#: ''This shirt '''costs''' $50, while this is cheaper at only $30.''
+#: ''This shirt '''cost''' $50, while this is cheaper at only $30.''
 #: ''It will '''cost''' you a lot of money to take a round-the-world trip.''
 #: ''Entry to the museums used to be free, but now it '''costs''' 5 pounds.''
 # To cause something to be lost.
