/* Verb */ expand a sense <feel#13578325>

--- a/en/f/feel.6876.wikitext
+++ b/en/f/feel.6876.wikitext
@@ -47,10 +47,11 @@ From {{etyl|enm}} {{term|felen|lang=enm}}, from {{etyl|ang}} {{term|felan|fēlan
 #: ''He '''felt''' for the light switch in the dark.''
 # {{intransitive}} To experience and emotion or other mental state.
 #: ''He obviously '''feels''' strongly about it.''
-# {{context|copulative}} To [[seem]].
+# {{context|copulative}} To [[seem]] (through [[touch]] or otherwise).
 #: ''It looks like wood, but it '''feel'''s more like plastic.''
+#: ''This is supposed to be a party, but it '''feels''' more like a funeral!''
 # {{intransitive}} To [[sympathise]].
-#: ''I feel for you and your plight''
+#: ''I '''feel''' for you and your plight.''
 # {{transitive}} {{US|slang}} To [[understand]].
 #: ''I don't want you back here, ya '''feel''' me?''
 
