--- a/en/f/feel.6876.wikitext
+++ b/en/f/feel.6876.wikitext
@@ -56,7 +56,7 @@ From {{etyl|enm}} {{term|felen|lang=enm}}, from {{etyl|ang}} {{term|felan|fēlan
 #: ''I don't want you back here, ya '''feel''' me?''
 
 ======Usage notes======
-* {{term|badly|Badly}} is sometimes used after {{term|feel}} in its copulative sense where one might expect an adjective, ie, {{term|bad}}. Most prescriptive grammarians prefer "I feel bad" to "I feel badly", but "I feel badly" is widely used.
+* {{term|badly|Badly}} is sometimes used after {{term|feel}} in its copulative sense where one might expect an adjective, ie, {{term|bad}}. Most prescriptive grammarians prefer "I feel bad" to "I feel badly", but "I feel badly" is widely used in US English.
 <!--* ''I feel bad.'' means either ''I seem to myself to be [[sick]].'' or ''I am full of [[regret]].''
 * ''I feel badly.'' means ''I have [[trouble]] experiencing emotions.'' or ''I am not able to use the sense of touch well.'' Both comments incomplete and misleading.-->
 * Adjectives to which "feel" is often applied as a copula: free, cold, cool, warm, hot, young, old, good, great, fine, happy, glad, satisfied, excited, bad, depressed, unhappy, sad, blue, sorry, smart, stupid, loved, appreciated, accepted, rejected, lonely, isolated, insulted, offended, slighted, cheated, shy, refreshed, tired, exhausted, calm, relaxed, angry, annoyed, frustrated, anxious, worried, jealous,  proud, confident, safe, grateful, uncomfortable, unsafe, insecure, desperate, guilty, ashamed, disappointed, dirty, odd, strange, ill, sick.
