--- a/en/f/flesh.6883.wikitext
+++ b/en/f/flesh.6883.wikitext
@@ -16,8 +16,17 @@ From {{etyl|ang|en}} {{term|flæsc|flǣsc|lang=ang}}, from {{proto|Germanic|flai
 # {{archaic}} [[animal|Animal]] tissue regarded as food; [[meat]].
 #* '''1485''', Thomas Malory, ''Le Morte Darthur'', Book XV:
 #*: I charge the that thou ete no '''fleysshe''' as longe as ye be in the Queste of Sankgreall, nother ye shall drynke no wyne [...].
+#* '''c.1530s''', [[s:William Tyndale|William Tyndale]], ''[[s:Bible (Tyndale)|Tyndale Bible]]'', ''[[s:Bible (Tyndale)/Leviticus|Leviticus]]'', 7, xix-xxi,
+#*: The '''flesh''' that twycheth any vnclene thinge shall not be eaten. but burnt with fire: and all that be clene in their flesh, maye eate '''flesh'''.
+#*: Yf any soule eate of the '''flesh''' of the peaceofferynges, that pertayne vnto the Lorde and hys vnclennesse yet apon him, the same soule shall perisshe from amonge his peoole{{sic}}.
+#*: Moreouer yf a soule twych any vnclene thinge, whether it be the vnclennesse of man or of any vnclene beest or any abhominacion that is vnclene: ad the eate of the '''flesh''' of the peaceoffrynges whiche pertayne vnto the Lord, that soule shall perissh from his people.
 # The [[human]] body as a physical entity.
-# (religious) The [[evil]] and corrupting principle working in man.
+#* '''c.1530s''', [[s:William Tyndale|William Tyndale]], ''[[s:Bible (Tyndale)|Tyndale Bible]]'', ''[[s:Bible (Tyndale)/Leviticus|Leviticus]]'', 6, x,
+#*: And the preast shall put on his lynen albe and his lynen breches apon his '''flesh''', and take awaye the asshes whiche the fire of the burntsacrifice in the altare hath made, and put them besyde the alter,
+# {{religion}} The [[mortal]] part of a human being, contrasted with the [[spirit]].
+#* '''1769''', ''[[s:Bible (King James)|King James Bible]]'', Oxford Standard text, ''[[s:Bible (King James)/Galatians|Galatians]]'', 5, xvii,
+#*: For the '''flesh''' lusteth against the Spirit, and the Spirit against the '''flesh''': and these are contrary the one to the other: so that ye cannot do the things that ye would.
+# {{religion}} The [[evil]] and corrupting principle working in man.
 # The skin of a human or animal.
 # The soft, often edible, parts of [[fruit]]s or [[vegetable]]s.
 #* '''2003''', Diana Beresford-Kroeger, ''Arboretum America: A Philosophy of the Forest'', [http://books.google.com/books?id=7HgjzLERa1kC&pg=PA80&dq=flesh+walnut&hl=en&ei=45EyTpb4A4_qmAX9k73wCg&sa=X&oi=book_result&ct=result&resnum=3&ved=0CDgQ6AEwAg#v=onepage&q=flesh%20walnut&f=false page 81],
