--- a/en/惡/惡.15606.wikitext
+++ b/en/惡/惡.15606.wikitext
@@ -51,7 +51,7 @@
 ==Mandarin==
 
 ===Hanzi===
-{{cmn-hanzi|pin=[[è]] ([[e4]])|wg=o<sup>4</sup>}}
+{{cmn-hanzi|pin=[[è]] ([[e4]]), [[wū]], ([[wu1]]), [[wù]] ([[wu4]])|wg=o<sup>4</sup>}}
 
 # {{defn|lang=cmn|sort=心08}}
 
