t+ms:[[menghisap]] ([[WT:EDIT|Assisted]]) <suck#13592609>

--- a/en/s/suck.8436.wikitext
+++ b/en/s/suck.8436.wikitext
@@ -74,6 +74,7 @@
 * Latvian: {{t|lv|sūkt}}
 * Lithuanian: {{t-|lt|čiulpti|alt=čiul̃pti|xs=Lithuanian}}
 * [[Macedonian]]: {{t-|mk|цица|tr=cíca}}
+* Malay: {{t|ms|menghisap}}
 * Norwegian: {{t-|no|suge}}
 * Persian: {{t+|fa|مکیدن|tr=makidan|xs=Persian}}
 * Polish: {{t+|pl|ssać}}
