/* Derived terms */ <suck#13594878>

--- a/en/s/suck.8436.wikitext
+++ b/en/s/suck.8436.wikitext
@@ -36,6 +36,7 @@
 
 ====Derived terms====
 {{rel-top3|Terms derived from ''suck'' (verb)}}
+* [[insuck]]
 * [[sucker]]
 {{rel-mid3}}
 * [[suck face]]
