/* Derived terms */ <feel#13607766>

--- a/en/f/feel.6876.wikitext
+++ b/en/f/feel.6876.wikitext
@@ -81,6 +81,7 @@ From {{etyl|enm}} {{term|felen|lang=enm}}, from {{etyl|ang}} {{term|felan|fēlan
 * [[feel out]]
 * [[feel the heat]]
 {{rel-mid3}}
+* [[feel the pinch]]
 * [[feel up]]
 * [[feel up to]]
 * [[feeling]]
