--- a/en/p/play.8442.wikitext
+++ b/en/p/play.8442.wikitext
@@ -68,7 +68,7 @@
 *: Bokmål: {{t+|no|spill|n}}
 *: Nynorsk: {{t-|nn|spel|n|xs=Norwegian Nynorsk}}
 * Polish: {{t+|pl|zabawa|f}}
-* Portuguese: {{t+|pt|jogo|m}}
+* Portuguese: {{t+|pt|jogo|m}}, {{t|pt|brincadeira|f}}
 * Romanian: {{t+|ro|joc|m|f}}
 * Russian: {{t+|ru|игра|f|tr=igrá}}
 * [[Scottish Gaelic]]: {{t-|gd|cleasachd|f|xs=Scottish Gaelic}}
