t+la:[[consto]] t+la:[[valeo]] ([[WT:EDIT|Assisted]]) <cost#13630138>

--- a/en/c/cost.6840.wikitext
+++ b/en/c/cost.6840.wikitext
@@ -155,6 +155,7 @@ The past tense and past participle is ''cost'' in the sense of "this computer ''
 * Italian: {{t+|it|costare}}
 * Japanese: [[費やす]] ([[ついやす]], tsuiyasu), {{t-|ja|掛かる|tr=kakaru}}
 * [[Kannada]]: {{t+|kn|ಬೀರು|tr=bīru|sc=Knda|xs=Kannada}}
+* Latin: {{t|la|consto}}, {{t|la|valeo}}
 * Latvian: {{t|lv|maksāt}}
 * Polish: {{t+|pl|kosztować}}
 * Portuguese: {{t+|pt|custar}}
