+rhyme [[Rhymes:Dutch:-ɛt|-ɛt]] <het#13630345>

--- a/en/h/het.1522.wikitext
+++ b/en/h/het.1522.wikitext
@@ -41,6 +41,7 @@ Strong conjugation of {{term|heat}}
 From {{etyl|odt|nl}} *''it'', *''hit'', neuter form of {{proto|Germanic|hiz|lang=nl}} or {{proto|Germanic|iz|lang=nl|title=}}.
 
 ===Pronunciation===
+* {{rhymes|ɛt|lang=nl}}
 * {{a|BE}} {{IPA|/ɦət/|lang=nl}}
 * {{audio|Nl-het (Belgium).ogg|audio (Belgium)}}
 * {{a|NL}} {{IPA|/ɦɛt/|/ət/|lang=nl}}
