--- a/en/b/branch.7390.wikitext
+++ b/en/b/branch.7390.wikitext
@@ -14,13 +14,13 @@ From {{etyl|fro}} {{term|branche|lang=fro}}, from {{etyl|VL.}} {{term|branca||pa
 {{en-noun|es}}
 {{wikipedia}}
 
-# The [[woody]] part of a [[tree]] arising from the [[trunk]] and usually [[dividing]]
-# Something that [[divide]]s like the branch of a tree
+# The [[woody]] part of a [[tree]] arising from the [[trunk]] and usually [[dividing]].
+# Something that [[divide]]s like the branch of a tree.
 # A [[location]] of an [[organization]] with several locations.
 #: ''Our main branch is downtown, and we have branches in all major suburbs.''
-# {{context|Mormonism}} A subdivision of the [[LDS]] Church, smaller than and part of a [[stake]], but smaller than a [[ward]].
-# An area in business or of knowledge, research
-# {{nautical}} The [[certificate]] given by [[Trinity House]] to a [[pilot]] [[qualified]] to take [[navigational]] [[control]] of a [[ship]] in [[British]] [[water]]s
+# {{context|Mormonism}} A local [[congregation]] of the [[LDS]] Church that is not large enough to form a [[ward]]; see [[w:Ward (LDS Church)|Wikipedia article on ward in LDS church]].
+# An area in business or of knowledge, research.
+# {{nautical}} A [[certificate]] given by [[Trinity House]] to a [[pilot]] [[qualified]] to take [[navigational]] [[control]] of a [[ship]] in [[British]] [[water]]s.
 
 ====Related terms====
 * [[branch banking]]
@@ -109,7 +109,7 @@ From {{etyl|fro}} {{term|branche|lang=fro}}, from {{etyl|VL.}} {{term|branca||pa
 *: Mandarin: {{t|zh|支店|tr=zhīdiàn|sc=Hani}}, {{t|zh|部門|sc=Hani}}, {{t|zh|部门|tr=bùmén|sc=Hani}}
 * Czech: {{t-|cs|pobočka|f}}
 * Dutch: {{t+|nl|filiaal}}
-* Finnish: [[sivukonttori]]
+* Finnish: {{t|fi|sivukonttori}}, {{t|fi|haarakonttori}}
 * German: {{t+|de|Zweigstelle|f}}, {{t+|de|Filiale|f}}
 * Hebrew: {{t-|he|סניף|m|tr=snif}}
 * Hungarian: {{t+|hu|fiók}}
@@ -129,13 +129,13 @@ From {{etyl|fro}} {{term|branche|lang=fro}}, from {{etyl|VL.}} {{term|branca||pa
 * Vietnamese: [[nhánh]]
 {{trans-bottom}}
 
-{{trans-top|subdivision of the LDS Church}}
+{{trans-top|small congregation of the LDS Church}}
 * Russian: {{t+|ru|приход|m}}
 {{trans-mid}}
 * Swahili: {{t+|sw|tanzu|xs=Swahili}}
 {{trans-bottom}}
 
-{{trans-top|an area in business or of knowledge, research}}
+{{trans-top|area in business or of knowledge, research}}
 * Armenian: {{t-|hy|ճյուղ|tr=č̣yuġ}}
 * Bulgarian: {{t+|bg|област|f}}
 * Dutch: {{t+|nl|branch}} (of business), {{t|nl|bedrijfstak}} (of business), {{t+|nl|vakgebied}} (of knowledge)
@@ -155,7 +155,7 @@ From {{etyl|fro}} {{term|branche|lang=fro}}, from {{etyl|VL.}} {{term|branca||pa
 * Vietnamese: [[nhánh]]
 {{trans-bottom}}
 
-{{trans-top|certificate given by Trinity House to a pilot qualified to take navigational control of a ship in British waters}}
+{{trans-top|certificate given by Trinity House}}
 {{trans-mid}}
 {{trans-bottom}}
 
