t+hu:[[orrnyereg]] ([[WT:EDIT|Assisted]]) <bridge#13662105>

--- a/en/b/bridge.7389.wikitext
+++ b/en/b/bridge.7389.wikitext
@@ -168,6 +168,7 @@ From {{etyl|enm}} {{term|brigge|lang=enm}}, from {{etyl|ang|en}} {{term|brycg|la
 * Finnish: {{t|fi|nenän selkä}}
 * Greek: {{t|el|ράχη|f|tr=ráchi}}, {{t|el|άκανθα|f|tr=ákantha}}
 {{trans-mid}}
+* Hungarian: {{t|hu|orrnyereg}}
 * Italian: {{t-|it|setto}} nasale {{m}}
 * Polish: {{t|pl|grzbiet|m}}
 * Russian: {{t+|ru|переносица|f|tr=perenósica}}
