t+bi:[[Niu Zilan]] t+hif:[[New Zealand]] t+zu:[[INyuzilandi]] t+nah:[[Yancuīc Zetlālpan]] t+ty:[[Aotearoa]] t+wo:[[Seland-Gu-Bees]] ([[WT:EDIT|Assisted]]) <New Zealand#13666746>

--- a/en/n/New Zealand.2106.wikitext
+++ b/en/n/New Zealand.2106.wikitext
@@ -22,6 +22,7 @@ From {{etyl|nl}} ''[[Nieuw-Zeeland]]'', "new Zeeland", after the Dutch settlemen
 * Armenian: {{t-|hy|Նոր Զելանդիա|tr=Nor Zelandia}}
 * Belarusian: {{t|be|Новая Зеландыя|f|tr=Nóvaja Zelándyja|xs=Belarusian}}, {{t|be|Новая Зэляндыя|f|tr=Nóvaja Zeljándyja|xs=Belarusian}} {{qualifier|Taraškevica orthography}}
 * Bengali: {{t-|bn|নিউজিল্যান্ড}}
+* [[Bislama]]: {{t|bi|Niu Zilan}}
 * [[Breton]]: {{t|br|Zeland-Nevez|xs=Breton}}
 * Bulgarian: {{t|bg|Нова Зеландия|f|tr=Nóva Zelándija}}
 * [[Catalan]]: {{t|ca|Nova Zelanda}}
@@ -33,6 +34,7 @@ From {{etyl|nl}} ''[[Nieuw-Zeeland]]'', "new Zeeland", after the Dutch settlemen
 * Esperanto: {{t-|eo|Nov-Zelando|xs=Esperanto}}
 * Estonian: {{t|et|Uus-Meremaa}}
 * Faroese: {{t|fo|New Zealand|m}}
+* [[Fiji Hindi]]: {{tø|hif|New Zealand}}
 * Finnish: {{t+|fi|Uusi-Seelanti}}
 * French: {{t+|fr|Nouvelle-Zélande|f}}
 * German: {{t+|de|Neuseeland|n}}
@@ -61,6 +63,7 @@ From {{etyl|nl}} ''[[Nieuw-Zeeland]]'', "new Zeeland", after the Dutch settlemen
 * [[Manx]]: {{t-|gv|Noa Heelan|f|xs=Manx}}, {{t-|gv|Seelan Noa|f|alt=Yn Teelan Noa|xs=Manx}}
 * Maori: {{t-|mi|Aotearoa|xs=Maori}}, {{t|mi|Niu Tireni|xs=Maori}}
 * [[Meru]]: {{tø|mer|Nyuziland}}, {{tø|mer|Nyuziland}}
+* [[Nahuatl]]: {{t|nah|Yancuīc Zetlālpan}}
 * Norwegian: {{t+|no|New Zealand}}, {{t-|no|Ny-Zealand}}
 * Persian: {{t|fa|نیوزیلند|xs=Persian}}
 * Polish: {{t+|pl|Nowa Zelandia|f}}
@@ -75,13 +78,16 @@ From {{etyl|nl}} ''[[Nieuw-Zeeland]]'', "new Zeeland", after the Dutch settlemen
 * Spanish: {{t+|es|Nueva Zelanda|f}}, {{t+|es|Nueva Zelandia|f}}
 * Swahili: {{t+|sw|Nyuzilandi|xs=Swahili}}
 * Swedish: {{t+|sv|Nya Zeeland}}
+* [[Tahitian]]: {{tø|ty|Aotearoa}}
 * Thai: {{t|th|ประเทศนิวซีแลนด์|tr=bpràtêt niw-seelaen}}, {{t|th|นิวซีแลนด์|tr=niw-seelaen}}
 * Turkish: {{t+|tr|Yeni Zelanda}}
 * Ukrainian: {{t|uk|Нова Зеландія|f|tr=Nová Zelándija|xs=Ukrainian}}
 * Urdu: {{t|ur|نیوزی لینڈ|xs=Urdu}}
 * Vietnamese: {{t-|vi|New Zealand|xs=Vietnamese}}, {{t|vi|Tân Tây Lan|xs=Vietnamese}} ({{t-|vi|新西蘭|sc=Hani|xs=Vietnamese}})
 * Welsh: {{t|cy|Seland Newydd|xs=Welsh}}
+* [[Wolof]]: {{t|wo|Seland-Gu-Bees}}
 * Yiddish: {{t|yi|ניו-זילאנד|sc=Hebr}}
+* [[Zulu]]: {{t|zu|INyuzilandi}}
 {{trans-bottom}}
 
 ====Synonyms====
