--- a/en/s/suck.8436.wikitext
+++ b/en/s/suck.8436.wikitext
@@ -54,6 +54,7 @@
 * [[Basque]]: {{t|eu|xurgatu}}
 * Bengali: {{t-|bn|চোষা|tr=cosha|sc=Beng|xs=Bengali}}
 * Bulgarian: {{t+|bg|смуча|tr=smuča}}
+* Burmese: {{t|my|စုပ်|tr=sok|sc=Mymr}}
 * [[Catalan]]: [[xuclar]]
 * Czech: {{t-|cs|sát}}
 * Dutch: {{t|nl|zuigen}}
