--- a/en/s/suck.8436.wikitext
+++ b/en/s/suck.8436.wikitext
@@ -96,7 +96,10 @@
 * Turkish: {{t|tr|emmek}}
 * Ukrainian: {{t-|uk|смоктати|tr=smoktáty|xs=Ukrainian}}, {{t-|uk|ссати|tr=ssáty|xs=Ukrainian}}
 {{trans-bottom}}
-
+{{trans-top|to work the lips and tongue on}}
+* German: {{t|de|lutschen}}
+{{trans-mid}}
+{{trans-bottom}}
 {{trans-top|colloquial: term of general disparagement}}
 * Bulgarian: {{t+|bg|духам|tr=dukham}}
 * Finnish: {{t+|fi|haista}}, {{t|fi|olla syvältä}}
