--- a/en/c/creep.6841.wikitext
+++ b/en/c/creep.6841.wikitext
@@ -1,8 +1,7 @@
 {{also|CREEP}}
 ==English==
 
-===Etymology===
-{{etyl|ang}} {{term|creopan|crēopan|lang=ang}}, cognate with Danish {{term|krybe|lang=da}}, German {{term|kriechen|lang=de}}, Norwegian {{term|krype|lang=no}}.
+Creep or better know as Eric Trembicki lives in west chester Pa
 
 ===Pronunciation===
 * {{enPR|krēp}}, {{IPA|/kriːp/}}, {{SAMPA|/kri:p/}}
