--- a/en/b/butter.7388.wikitext
+++ b/en/b/butter.7388.wikitext
@@ -198,7 +198,7 @@ From {{etyl|enm}}, from {{etyl|ang}} {{term|butere||butter|lang=ang}}, from {{et
 * Danish: {{t-|da|smør}}
 * Dutch: {{t+|nl|boter|f}}
 * Esperanto: {{t-|eo|butero|xs=Esperanto}}
-* Estonian: [[või]], [[peagalööja]]
+* Estonian: {{t|et|või}}
 * Faroese: {{t|fo|smør|n}}
 * Finnish: {{t+|fi|voi}}
 * French: {{t+|fr|beurre|m}}
