t+lb:[[Filz]] ([[WT:EDIT|Assisted]]) <felt#13708471>

--- a/en/f/felt.6877.wikitext
+++ b/en/f/felt.6877.wikitext
@@ -41,6 +41,7 @@
 * [[Ido]]: {{t+|io|felto|xs=Ido}}
 * Italian: {{t+|it|feltro|m}}
 * Japanese: {{t|ja|フェルト|tr=feruto|sc=Jpan}}, {{t|ja|羅紗|tr=らしゃ, rasha|sc=Jpan}}
+* [[Luxembourgish]]: {{t|lb|Filz|m}}
 * Norwegian: {{t-|no|filt|m}}
 * Russian: {{t+|ru|фетр|m|tr=fetr|sc=Cyrl}}, {{t|ru|войлок|m|tr=vójlok|sc=Cyrl}}
 * Spanish: {{t-|es|fieltro|m}}
