--- a/en/e/et cetera.7211.wikitext
+++ b/en/e/et cetera.7211.wikitext
@@ -15,8 +15,8 @@
 From {{etyl|la}} {{term|et cetera|et cētera|lang=la|and the rest" or "and so forth}}
 
 ===Pronunciation===
-* {{IPA|/ˌɛt ˈsɛtəɹə/}}<br>{{audio|en-us-etc.ogg|Audio (US)}}
-* mispronounced {{IPA|/ˌɛkˈsɛt(ə)ɹə/}}
+* {{IPA|/ˌɛt ˈsɛtəɹə/|/ˌɛkˈsɛt(ə)ɹə/|lang=en}}; see usage notes below
+*: {{audio|en-us-etc.ogg|Audio (US)}}
 
 ===Phrase===
 {{infl|en|phrase|head=[[et]] [[cetera]]}}
@@ -27,7 +27,8 @@ From {{etyl|la}} {{term|et cetera|et cētera|lang=la|and the rest" or "and so fo
 #: ''The plagiarism was painfully obvious: "It was the best of times, it was the worst of times," '''etc.'''''
 
 ====Usage notes====
-* Abbreviated as [[etc.]]; also as [[&c.]].
+* This phrase is not usually written out; rather, it is usually abbreviated in writing as {{term|etc.|lang=en}}, or sometimes (especially formerly) as {{term|&c.|lang=en}}. These abbreviations are still pronounced, however, as the full phrase.
+* Many speakers use a {{IPAchar|/k/|lang=en}} sound rather than a {{IPAchar|/t/|lang=en}} sound in the first word. This pronunciation is usually considered incorrect, and it is somewhat stigmatized. That pronunciation is sometimes represented in [[eye dialect]] as &lt;[[excetera#English|excetera]]&gt; or &lt;[[exetera#English|exetera]]&gt;.
 
 ====Synonyms====
 * {{sense|to complete a list}} [[et al.]]
