--- a/en/c/count.8441.wikitext
+++ b/en/c/count.8441.wikitext
@@ -245,6 +245,7 @@ From {{etyl|fro}} {{term|comte|lang=fro}}, {{term|conte|lang=fro}}.
 {{trans-mid}}
 * Italian: {{t+|it|conte}}
 * Japanese: {{t|ja|伯爵|tr=はくしゃく, hakushaku|sc=Jpan}}
+* [[Khmer]]: {{t|km|ព្រះ|tr=preah|sc=Khmr}}
 * Latin: {{t-|la|comes|m}}
 * Latvian: {{t|lv|grāfs|m|xs=Latvian}}
 * Lithuanian: {{t-|lt|grafas|m|xs=Lithuanian}}
