--- a/en/g/Germany.2103.wikitext
+++ b/en/g/Germany.2103.wikitext
@@ -180,7 +180,7 @@ From {{etyl|la}} {{term|Germania|lang=la}}, likely of Gallic origin
 
 [[Category:English proper nouns]]
 [[Category:en:Exonyms]]
-[[Category:en:Germany]]
+[[Category:en:Germany| ]]
 
 [[af:Germany]]
 [[ar:Germany]]
