--- a/en/c/Czech Republic.2104.wikitext
+++ b/en/c/Czech Republic.2104.wikitext
@@ -47,6 +47,7 @@
 * Italian: la [[repubblica Ceca]] {{f}}
 * Japanese: {{t+|ja|チェコ|tr=Cheko}}, {{t-|ja|チェコ共和国|tr=Cheko-kyōwakoku}}({{Jpan|ちぇこきょうわこく}})
 * Kazakh: {{t|kk|Чех Республикасы|tr=Čex Respublikası|sc=Cyrl|xs=Kazakh}}
+* [[Khmer]]: {{t|km|សាធារណរដ្ឋឆែក|tr=sar thea rak nak roath chaek|sc=Khmr}}
 * Korean: {{t|ko|체코 공화국|tr=Cheko gong-hwaguk|sc=Hang}},  {{t|ko|체코|tr=Cheko|sc=Hang}}
 * Kurdish: [[Komara Çêkiyayê]]
 {{trans-mid}}
