--- a/en/g/Germany.2103.wikitext
+++ b/en/g/Germany.2103.wikitext
@@ -71,7 +71,7 @@ From {{etyl|la}} {{term|Germania|lang=la}}, likely of Gallic origin
 * Japanese: {{t+|ja|ドイツ|tr=Doitsu}}, {{t+|ja|独逸|tr=Doitsu}} {{qualifier|obsolete}}
 * [[Kannada]]: {{t-|kn|ಜರ್ಮನಿ|tr=jarmani|sc=Knda|xs=Kannada}}
 * Kazakh: {{t|kk|Германия|tr=Germaniya|sc=Cyrl}}
-* [[Khmer]]: {{t|km|ប្រទេស​អាឡឺម៉ង់|tr=bprədtēh āleumong|sc=Khmr}}
+* [[Khmer]]: {{t|km|​អាល្លឺម៉ង់|tr=āleumong|sc=Khmr}}
 * Korean: {{t+|ko|독일|tr=Dogil|sc=Hang}} ({{t|ko|獨逸|sc=Hani}}); {{t|ko|도이췰란드|tr=Doichwillandeu|sc=Hang}} (''North Korea'')
 * [[Lao]]: {{t|lo|ປະເທດເຢັຽລະມັນ|sc=Laoo}}
 * [[Latgalian]]: {{tø|ltg|Vuoceja|f}}
