--- a/en/昴/昴.16989.wikitext
+++ b/en/昴/昴.16989.wikitext
@@ -30,11 +30,25 @@
 * {{ja-readings|on=[[ボウ]] (bō), [[モウ]] (mō)|kun= (none)}}
 * Nanori (using for a person's name) [[すばる]] (subaru)
 
-===Proper noun===
-{{ja-pos|k|proper|hira=すばる|rom=Subaru}} (すまる, Sumaru; たかし, Takashi; のぼる, Noboru)
+===Etymology 1===
+
+By extension from {{etyl|ja}} {{term|統ばる||to bunch together; to unite|tr=subaru|lang=ja}}, due to the way the stars in the constellation all cluster together.
+
+====Proper noun====
+{{ja-pos|k|proper|hira=すばる|rom=Subaru}} 
 
 # the [[Pleiades]] (star cluster)
-# a person's name
+
+===Etymology 2===
+
+====Proper noun====
+{{ja-pos|k|proper|hira=すまる|rom=Sumaru}}
+
+{{ja-pos|k|proper|hira=たかし|rom=Takashi}}
+
+{{ja-pos|k|proper|hira=のぼる|rom=Noboru}}
+
+# a masculine given name
 
 ----
 
