t+ia:[[directe]] ([[WT:EDIT|Assisted]]) <straight#13740162>

--- a/en/s/straight.7217.wikitext
+++ b/en/s/straight.7217.wikitext
@@ -104,6 +104,7 @@
 * Icelandic: {{t+|is|beinn}}
 * Indonesian: {{t|id|lurus}}
 {{trans-mid}}
+* [[Interlingua]]: {{t|ia|directe}}
 * Irish: {{t-|ga|díreach|xs=Irish}}
 * Italian: {{t+|it|dritto}}
 * Japanese: {{t|ja|真直ぐ|tr=まっすぐな, massugu-na|alt=真直ぐな|sc=Jpan}}
