--- a/en/昴/昴.16989.wikitext
+++ b/en/昴/昴.16989.wikitext
@@ -30,8 +30,7 @@
 * {{ja-readings|on=[[ボウ]] (bō), [[モウ]] (mō)|nanori=[[すばる]] (Subaru), [[すまる]] (Sumaru), [[たかし]] (Takashi), [[のぼる]] (Noboru)}}
 
 ===Etymology 1===
-
-By extension from {{etyl|ja}} {{term|統ばる||to bunch together; to unite|tr=subaru|lang=ja}}, due to the way the stars in the constellation all cluster together.
+By extension from {{term|統ばる||to bunch together; to unite|tr=subaru|lang=ja}}, due to the way the stars in the constellation all cluster together.
 
 ====Proper noun====
 {{ja-pos|k|proper|hira=すばる|rom=Subaru}} 
