t+lb:[[riicht]] t-balance ([[WT:EDIT|Assisted]]) <straight#13750636>

--- a/en/s/straight.7217.wikitext
+++ b/en/s/straight.7217.wikitext
@@ -103,12 +103,13 @@
 * Hungarian: {{t+|hu|egyenes}}
 * Icelandic: {{t+|is|beinn}}
 * Indonesian: {{t|id|lurus}}
-{{trans-mid}}
 * [[Interlingua]]: {{t|ia|directe}}
+{{trans-mid}}
 * Irish: {{t-|ga|díreach|xs=Irish}}
 * Italian: {{t+|it|dritto}}
 * Japanese: {{t|ja|真直ぐ|tr=まっすぐな, massugu-na|alt=真直ぐな|sc=Jpan}}
 * Kurdish: {{ku-Arab|[[ڕێک]]}}
+* [[Luxembourgish]]: {{t|lb|riicht}}
 * [[Macedonian]]: {{t-|mk|прав|m|tr=prav}}
 * Navajo: {{tø|nv|kʼézdon}}
 * Persian: {{t|fa|مستقیم|sc=fa-Arab}}
