--- a/en/址/址.12995.wikitext
+++ b/en/址/址.12995.wikitext
@@ -25,10 +25,13 @@
 ===Kanji===
 {{ja-kanji|grade=|rs=土04}}
 
-# {{defn|lang=ja|sort=土04}}
-
 ====Readings====
 * {{ja-readings|on=[[し]] (shi)|kun=[[あと]] (ato)}}
+
+===Noun===
+{{ja-noun|k|hira=あと|rom=ato}} 
+
+# {{alternative form of|跡|lang=ja}}
 
 ----
 
