--- a/en/坂/坂.12997.wikitext
+++ b/en/坂/坂.12997.wikitext
@@ -21,10 +21,16 @@
 ===Kanji===
 {{ja-kanji|grade=3|rs=土04}}
 
-# {{defn|lang=ja|sort=土04}}
-
 ====Readings====
 * {{ja-readings|on=[[はん]] (han)|kun=[[さか]] (saka)}}
+
+===Noun===
+{{ja-noun|k|hira=さか|rom=saka}} 
+
+# [[slope]], [[hill]]
+
+====Alternative forms====
+* {{l|ja|阪}}
 
 ----
 
