--- a/en/坑/坑.13012.wikitext
+++ b/en/坑/坑.13012.wikitext
@@ -27,10 +27,13 @@
 ===Kanji===
 {{ja-kanji|grade=c|rs=土04}}
 
-# {{defn|lang=ja|sort=土04}}
-
 ====Readings====
 * {{ja-readings|on=[[こう]] (kō)|kun=[[あな]] (ana), [[あなにする]] (ananisuru)}}
+
+===Noun===
+{{ja-noun|k|hira=こう|rom=kō}}
+
+# [[pit]], usually of a mine
 
 ----
 
