--- a/en/垣/垣.13095.wikitext
+++ b/en/垣/垣.13095.wikitext
@@ -24,10 +24,13 @@
 ===Kanji===
 {{ja-kanji|grade=c|rs=土06}}
 
-# {{defn|lang=ja|sort=土06}}
-
 ====Readings====
 * {{ja-readings|on=[[えん]] (en)|kun=[[かき]] (kaki)}}
+
+===Noun===
+{{ja-noun|k|hira=かき|rom=kaki}} 
+
+# [[fence]]
 
 ----
 
