--- a/en/c/catch.6830.wikitext
+++ b/en/c/catch.6830.wikitext
@@ -322,6 +322,7 @@ From {{etyl|enm}}, from {{etyl|xno}} {{term|cachier||lang=xno}}, from {{etyl|LL.
 * Irish: {{t|ga|beir ar|xs=Irish}}
 * Japanese: {{t-|ja|捕まえる|tr=tsukamaeru}}, {{t|ja|捕る|tr=toru}}
 * Korean: {{t+|ko|잡다|tr=japda|sc=Hang}}
+* [[Luxembourgish]]: {{t|lb|fänken}}
 * Persian: {{t+|fa|گرفتن|tr=geraftan|xs=Persian}}
 * Romanian: {{t+|ro|prinde}}
 * Russian: {{t|ru|поймать|tr=pojmát'}} {{pf.}}, {{t+|ru|ловить|tr=lovít'}} {{impf}}
