--- a/en/f/fight.6879.wikitext
+++ b/en/f/fight.6879.wikitext
@@ -44,7 +44,7 @@ From {{etyl|enm}} {{term|fighten|lang=enm}}, from {{etyl|ang}} {{term|feohtan||t
 * Albanian: {{t|sq|luftën}}
 * Arabic: {{t+|ar|قاتل|tr=qaatala}}, {{t|ar|تقاتل|tr=taqaatala}}
 * Aramaic:
-*: [[Syriac]]: {{tø|syr|ܟܬܫ|tr=kθaš|sc=Syrc}}
+*: [[Syriac]]: {{tø|syc|ܟܬܫ|tr=kθaš|sc=Syrc}}
 * Armenian: {{t-|hy|կռվել|tr=kṙvel}}
 * [[Basque]]: {{t|eu|borrokatu|xs=Basque}}, {{t|eu|borroka egin|xs=Basque}}
 * Bulgarian: [[боря се]]
