--- a/en/c/count.8441.wikitext
+++ b/en/c/count.8441.wikitext
@@ -123,7 +123,7 @@ From {{etyl|enm}} {{term|counten|lang=enm}}, from {{etyl|xno|en}} {{term|conter|
 * [[Anglo-Norman]]: {{tø|xno|counter}}
 * Arabic: {{t|ar|عد|tr=3ádda|sc=Arab}}
 * Aramaic:
-*: [[Classical Syriac]]: {{tø|syc|ܡܢܐ|tr=mna|sc=Syrc}}
+*: [[Syriac]]: {{tø|syc|ܡܢܐ|tr=mna|sc=Syrc}}
 * Armenian: {{t-|hy|հաշվել|tr=hašvel}}
 * Belarusian: {{t|be|рахаваць|tr=raxavác'|sc=Cyrl}}, {{t|be|лічыць|tr=ličýc'|sc=Cyrl}}
 * Bengali: {{t|bn|গুনতি|tr=gunti|sc=Beng}}, {{t|bn|গণনা|tr=gôṇna|sc=Beng}}
