/* Danish */ fix markup <New Zealand#13827441>

--- a/en/n/New Zealand.2106.wikitext
+++ b/en/n/New Zealand.2106.wikitext
@@ -116,7 +116,7 @@ From {{etyl|nl}} ''[[Nieuw-Zeeland]]'', "new Zeeland", after the Dutch settlemen
 ===Proper noun===
 {{infl|da|proper noun}}
 
-# {{l|en|New Zealand}}] (country in Oceania)
+# {{l|en|New Zealand}} (country in Oceania)
 
 ====Related terms====
 * [[newzealandsk]]
