--- a/en/p/port.1843.wikitext
+++ b/en/p/port.1843.wikitext
@@ -34,7 +34,7 @@
 
 =====Translations=====
 {{trans-top|dock or harbour}}
-* Arabic: {{Arab|[[ميناء]]}} {{IPAchar|(mīna’)}} {{m}}
+* Arabic: {{Arab|[[ميناء]]}} {{IPAchar|(mīna’)}} {{m}}, {{t|ar|ميناء|m|tr=mīna’|sc=Arab}}
 * Armenian: {{t-|hy|նավահանգիստ|tr=navahangist}}
 * Chinese:
 *: Mandarin: {{t-|cmn|港|tr=gǎng|sc=Hani}},  {{t|cmn|港口|tr=gǎngkǒu|sc=Hani}},  {{t-|cmn|口岸|tr=kǒu'àn|sc=Hani}},  {{t|cmn|港埠|tr=gǎngbù|sc=Hani}}
@@ -50,10 +50,10 @@
 * Icelandic: {{t|is|höfn|f}}
 * [[Ido]]: [[portuo]]
 * Indonesian: {{t-|id|pelabuhan|xs=Indonesian}}
-{{trans-mid}}
 * Italian: {{t+|it|porto|m}}
-* Japanese: [[港]]　([[みなと]], ''minato'')
-* Korean: [[항구]] ([[港口]], hanggu)
+{{trans-mid}}
+* Japanese: [[港]]　([[みなと]], ''minato''), {{t|ja|港|tr=みなと, minato|sc=Jpan}}
+* Korean: [[항구]] ([[港口]], hanggu), {{t|ko|항구|tr=hanggu|sc=Kore}}, {{t|ko|港口|sc=Kore}}
 * Latvian: {{t|lv|osta|f}}
 * Lithuanian: {{t|lt|uostas|m}}
 * [[Malayalam]]: [[തുറമുഖം]] (thuRamukham)
@@ -68,6 +68,8 @@
 * Swahili: {{t+|sw|bandari|xs=Swahili}}
 * Swedish: {{t+|sv|hamn|c}}
 * [[Telugu]]: [[ఓడరేవు]] (ODaraevu)
+* Thai: {{t|th|พอร์ต|tr=pôt|sc=Thai}}
+* Vietnamese: {{t|vi|cảng}}, {{t|vi|港}}
 {{trans-bottom}}
 
 {{trans-top|town or city with a dock or harbour}}
