t+hi:[[बंदरगाह]] t-balance ([[WT:EDIT|Assisted]]) <port#13842799>

--- a/en/p/port.1843.wikitext
+++ b/en/p/port.1843.wikitext
@@ -46,12 +46,13 @@
 * French: {{t+|fr|port|m}}
 * German: {{t+|de|Hafen|m}}
 * Greek: {{t+|el|λιμάνι|n|tr=limáni}}, {{t+|el|λιμένας|m|tr=liménas}}
+* Hindi: {{t|hi|बंदरगाह|m|tr=bandargāh|sc=Deva}}
 * Hungarian: {{t+|hu|kikötő}}
 * Icelandic: {{t|is|höfn|f}}
 * [[Ido]]: [[portuo]]
 * Indonesian: {{t-|id|pelabuhan|xs=Indonesian}}
-* Italian: {{t+|it|porto|m}}
 {{trans-mid}}
+* Italian: {{t+|it|porto|m}}
 * Japanese: [[港]]　([[みなと]], ''minato''), {{t|ja|港|tr=みなと, minato|sc=Jpan}}
 * Korean: [[항구]] ([[港口]], hanggu), {{t|ko|항구|tr=hanggu|sc=Kore}}, {{t|ko|港口|sc=Kore}}
 * Latvian: {{t|lv|osta|f}}
