--- a/en/p/port.1843.wikitext
+++ b/en/p/port.1843.wikitext
@@ -67,9 +67,8 @@
 * Romanian: {{t-|ro|port|n}}
 * Russian: {{t+|ru|порт|m|tr=port}}
 * [[Scottish Gaelic]]: {{t|gd|port|m}}, {{t|gd|cala|m}}, {{t|gd|acarsaid|f}}
-* Serbian: {{t|sr|лука|f|tr=luka|sc=Cyrl}}
 * Serbo-Croatian:
-*: Cyrillic: {{t|sh|лука|m}}
+*: Cyrillic: {{t|sh|лука|f}}
 *: Roman: {{t|sh|luka|f}}
 * Spanish: {{t-|es|puerto|m}}
 * Swahili: {{t+|sw|bandari|xs=Swahili}}
