t+ka:[[პორტი]] t-balance t+tr:[[liman]] t+az:[[liman]] t+he:[[נמל]] t+kk:[[кемежай]] ([[WT:EDIT|Assisted]]) <port#13842865>

--- a/en/p/port.1843.wikitext
+++ b/en/p/port.1843.wikitext
@@ -36,6 +36,7 @@
 {{trans-top|dock or harbour}}
 * Arabic: {{t|ar|ميناء|m|tr=mīna’|sc=Arab}}
 * Armenian: {{t-|hy|նավահանգիստ|tr=navahangist}}
+* [[Azeri]]: {{t|az|liman}}
 * Belarusian: {{t|be|порт|m|tr=port|sc=Cyrl}}
 * Bulgarian: {{t|bg|порт|m|tr=port|sc=Cyrl}}
 * Chinese:
@@ -46,16 +47,19 @@
 * Estonian: {{t-|et|sadam}}
 * Finnish: {{t+|fi|satama}}
 * French: {{t+|fr|port|m}}
+* Georgian: {{t|ka|პორტი|tr=porti|sc=Geor}}
 * German: {{t+|de|Hafen|m}}
 * Greek: {{t+|el|λιμάνι|n|tr=limáni}}, {{t+|el|λιμένας|m|tr=liménas}}
+* Hebrew: {{t|he|נמל|m|tr=namál|sc=Hebr}}
 * Hindi: {{t|hi|बंदरगाह|m|tr=bandargāh|sc=Deva}}
 * Hungarian: {{t+|hu|kikötő}}
 * Icelandic: {{t|is|höfn|f}}
 * [[Ido]]: [[portuo]]
 * Indonesian: {{t-|id|pelabuhan|xs=Indonesian}}
 * Italian: {{t+|it|porto|m}}
-* Japanese: {{t|ja|港|tr=[[みなと]], minato|sc=Jpan}}
 {{trans-mid}}
+* Japanese: {{t|ja|港|tr=[[みなと]], minato|sc=Jpan}}
+* Kazakh: {{t|kk|кемежай|tr=kemejay|sc=Cyrl}}
 * Korean: {{t|ko|항구|tr=hanggu|sc=Kore}} ({{t|ko|港口|sc=Kore}})
 * Latvian: {{t|lv|osta|f}}
 * Lithuanian: {{t|lt|uostas|m}}
@@ -75,6 +79,7 @@
 * Swedish: {{t+|sv|hamn|c}}
 * [[Telugu]]: [[ఓడరేవు]] (ODaraevu)
 * Thai: {{t|th|พอร์ต|tr=pôt|sc=Thai}}
+* Turkish: {{t|tr|liman}}
 * Ukrainian: {{t|uk|порт|m|tr=port|sc=Cyrl}}
 * Vietnamese: {{t|vi|cảng}} ({{t|vi|港}})
 {{trans-bottom}}
