t+tg:[[бандар]] t-balance t+ms:[[pelabuhan]] ([[WT:EDIT|Assisted]]) <port#13842867>

--- a/en/p/port.1843.wikitext
+++ b/en/p/port.1843.wikitext
@@ -57,13 +57,14 @@
 * [[Ido]]: [[portuo]]
 * Indonesian: {{t-|id|pelabuhan|xs=Indonesian}}
 * Italian: {{t+|it|porto|m}}
-{{trans-mid}}
 * Japanese: {{t|ja|港|tr=[[みなと]], minato|sc=Jpan}}
+{{trans-mid}}
 * Kazakh: {{t|kk|кемежай|tr=kemejay|sc=Cyrl}}
 * Korean: {{t|ko|항구|tr=hanggu|sc=Kore}} ({{t|ko|港口|sc=Kore}})
 * Latvian: {{t|lv|osta|f}}
 * Lithuanian: {{t|lt|uostas|m}}
 * [[Macedonian]]: {{t|mk|пристаниште|n|tr=pristánište|sc=Cyrl}}
+* Malay: {{t|ms|pelabuhan}}
 * [[Malayalam]]: [[തുറമുഖം]] (thuRamukham)
 * Persian: {{t+|fa|بندر|tr=bandar|xs=Persian}}
 * Polish: {{t+|pl|port|m}}
@@ -77,6 +78,7 @@
 * Spanish: {{t-|es|puerto|m}}
 * Swahili: {{t+|sw|bandari|xs=Swahili}}
 * Swedish: {{t+|sv|hamn|c}}
+* [[Tajik]]: {{t|tg|бандар|tr=bandar|sc=Cyrl}}
 * [[Telugu]]: [[ఓడరేవు]] (ODaraevu)
 * Thai: {{t|th|พอร์ต|tr=pôt|sc=Thai}}
 * Turkish: {{t|tr|liman}}
