t+ru:[[порт]] t-balance t+ru:[[портовый город]] ([[WT:EDIT|Assisted]]) <port#13847392>

--- a/en/p/port.1843.wikitext
+++ b/en/p/port.1843.wikitext
@@ -97,13 +97,14 @@
 * Greek: {{t+|el|λιμάνι|n|tr=limáni}}
 * Hungarian: {{t+|hu|kikötőváros}}
 * Icelandic: {{t|is|hafnarborg|f}}
-{{trans-mid}}
 * [[Ido]]: [[portuo]]
+{{trans-mid}}
 * Italian: [[città portuale]] {{f}}
 * Latvian: {{t|lv|ostas pilsēta |f}}
 * Lithuanian: {{t|lt|uostamiestis|m}}
 * Polish: [[miasto portowe]] {{n}}
 * Romanian: {{t-|ro|port|n}}
+* Russian: {{t|ru|порт|m|tr=port|sc=Cyrl}}, {{t|ru|портовый город|m|tr=portóvyj górod|sc=Cyrl}}
 * [[Scottish Gaelic]]: {{t|gd|port|m}}
 * Spanish: {{t-|es|puerto|m}}
 * Swahili: {{t+|sw|bandari|xs=Swahili}}
