--- a/en/c/come.6838.wikitext
+++ b/en/c/come.6838.wikitext
@@ -13,7 +13,7 @@
 * Homophones: [[cum]]
 
 ===Verb===
-{{en-verb|comes|[[coming]] ''or {{archaic}}'' [[come]]|came|come}}
+{{en-verb|comes|[[coming]]|came|come}}
 
 # {{intransitive}} To [[move]] from further [[away]] to [[near]]er to.
 #: ''She’ll be '''coming''' ’round the mountain when she '''comes'''...''
