t+ur:[[بندرگاہ]] t-balance t+hi:[[पोर्ट]] t+ur:[[پورٹ]] ([[WT:EDIT|Assisted]]) <port#13861625>

--- a/en/p/port.1843.wikitext
+++ b/en/p/port.1843.wikitext
@@ -51,15 +51,15 @@
 * German: {{t+|de|Hafen|m}}
 * Greek: {{t+|el|λιμάνι|n|tr=limáni}}, {{t+|el|λιμένας|m|tr=liménas}}
 * Hebrew: {{t|he|נמל|m|tr=namál|sc=Hebr}}
-* Hindi: {{t|hi|बंदरगाह|m|tr=bandargāh|sc=Deva}}
+* Hindi: {{t|hi|बंदरगाह|m|tr=bandargāh|sc=Deva}}, {{t|hi|पोर्ट|tr=porṭ|sc=Deva}}
 * Hungarian: {{t+|hu|kikötő}}
 * Icelandic: {{t|is|höfn|f}}
 * [[Ido]]: [[portuo]]
 * Indonesian: {{t-|id|pelabuhan|xs=Indonesian}}
 * Italian: {{t+|it|porto|m}}
 * Japanese: {{t|ja|港|tr=[[みなと]], minato|sc=Jpan}}
-{{trans-mid}}
 * Kazakh: {{t|kk|кемежай|tr=kemejay|sc=Cyrl}}
+{{trans-mid}}
 * Korean: {{t|ko|항구|tr=hanggu|sc=Kore}} ({{t|ko|港口|sc=Kore}})
 * Latvian: {{t|lv|osta|f}}
 * Lithuanian: {{t|lt|uostas|m}}
@@ -83,6 +83,7 @@
 * Thai: {{t|th|พอร์ต|tr=pôt|sc=Thai}}
 * Turkish: {{t|tr|liman}}
 * Ukrainian: {{t|uk|порт|m|tr=port|sc=Cyrl}}
+* Urdu: {{t|ur|بندرگاہ|m|tr=bandargāh|sc=ur-Arab}}, {{t|ur|پورٹ|tr=porṭ|sc=ur-Arab}}
 * Vietnamese: {{t|vi|cảng}} ({{t|vi|港}})
 {{trans-bottom}}
 
