--- a/en/b/beautiful.7394.wikitext
+++ b/en/b/beautiful.7394.wikitext
@@ -126,6 +126,7 @@ The comparatives '''[[beautifuler]]''' and '''[[beautifuller]]''', and the super
 * Urdu: {{t-|ur|خوبصورت|tr=xūbsūrat|xs=Urdu}}, {{t-|ur|سندر|tr=sundar|xs=Urdu}}
 * Vietnamese: {{t|vi|đẹp đẽ|xs=Vietnamese}}, {{t+|vi|tốt|xs=Vietnamese}}, {{t|vi|tốt đẹp|xs=Vietnamese}}, {{t|vi|đẹp}}
 * [[Volapük]]: {{t|vo|jönik}}
+* [[Walloon]]: {{t|wa|bea|m}}
 * Welsh: {{t|cy|hardd|xs=Welsh}}, {{t|cy|prydferth|xs=Welsh}}
 * [[West Frisian]]: [[moai]], [[kreas]]
 {{trans-bottom}}
