--- a/en/b/beautiful.7394.wikitext
+++ b/en/b/beautiful.7394.wikitext
@@ -55,6 +55,7 @@ The comparatives '''[[beautifuler]]''' and '''[[beautifuller]]''', and the super
 * [[American Sign Language]]: {{tø|ase|5@NearCheek-PalmBack RoundVert OpenA@NearJaw-PalmBack|xs=American Sign Language}}
 * [[Amharic]]: {{tø|am|ቆንጆ|tr=qonjo|sc=Ethi}}
 * Arabic: {{t-|ar|جميل|tr=jamiil}}
+*: [[Moroccan Arabic]]: {{tø|ary|زوين|m|tr=zwin}}
 * Armenian: {{t|hy|գեղեցիկ|tr=geġec'ik|sc=Armn}}, {{t|hy|սիրուն|tr=sirun|sc=Armn}}
 * [[Azeri]]:
 *: Cyrillic: {{t-|az|гәшәнҝ|sc=Cyrl|xs=Azeri}}
