Reverted edits by [[Special:Contributions/177.17.218.174|177.17.218.174]] ([[User_talk:177.17.218.174|Talk]]); changed back to last version by [[User:Flubot|Flubot]] <float#13899281>

--- a/en/f/float.8440.wikitext
+++ b/en/f/float.8440.wikitext
@@ -143,7 +143,7 @@ From {{etyl|enm}} {{term|floten|lang=enm}}, from {{etyl|ang}} {{term|flotian||to
 * Japanese: [[浮かぶ]] (ukabu), [[浮く]] (uku), [[漂う]] (tadayou)
 * [[Khmer]]: {{t|km|អន្ដែត|tr=on-dait|sc=Khmr|xs=Khmer}}
 {{trans-mid}}
-* Latin: {{t|la|fluctuo}}, {{t|la|no}}, {{t|la|nato}}
+* Latin: {{t|la|fluctuo}}
 * Lithuanian: [[plūduriuoti]] {{impf}}; [[plaukti]] {{impf}}
 * Portuguese: {{t|pt|boiar}}, {{t|pt|flutuar}}
 * Romanian: {{t+|ro|pluti}}
