--- a/en/地/地.12978.wikitext
+++ b/en/地/地.12978.wikitext
@@ -91,6 +91,19 @@
 ----
 
 ==Mandarin==
+{{zh-hanzi|[[地]]}}
+
+===Noun===
+{{cmn-noun|p|pin=dì|pint=di4}}
+
+# the [[earth]]
+# [[land]]
+#: [[地]][[是]][[空虚]][[混沌]]。[[渊面]][[黑暗]]。[[神]][[的]][[灵]][[运行]][[在]][[水面]][[上]]。
+#: [[dì|Dì]] [[shì]] [[kōngxū]] [[hùndùn]].  [[yuānmiàn|Yuānmiàn]] [[hēi'àn]].  [[Shén]] [[de]] [[líng]] [[yùnxíng]] [[zài]] [[shuǐmiàn]] [[shang]].
+#:: The earth was without form, and void; and darkness was upon the face of the deep.  And the Spirit of God moved upon the face of the waters.
+
+====References====
+* [http://wordproject.org/multi/bi_en_cn_py.htm Bible Genesis Chapter 1]
 
 ===Pronunciation===
 * {{audio|zh-de.ogg|audio}}
