/* Translations */ <United States of America#13909787>

--- a/en/u/United States of America.2102.wikitext
+++ b/en/u/United States of America.2102.wikitext
@@ -20,7 +20,7 @@
 * Armenian: {{t-|hy|Ամերիկայի Միացյալ Նահանգներ|tr=Amerikayi Miac'yal Nahangner}}
 * [[Azeri]]: {{t+|az|Amerika Birləşmiş Ştatları|xs=Azeri}}
 * Belarusian: {{t|be|Злучаныя Штаты Амерыкі|m|p|tr=Zlúčanyja Štáty Améryki|xs=Belarusian}}, {{t|be|ЗША|m|p|tr=ze-še-á|xs=Belarusian}}
-* Bengali: {{Beng|[[মার্কিন যুক্তরাষ্ট্র]]}}, {{t|bn|মার্কিন যুক্তরাষ্ট্র|tr=markin juktôrashţrô|sc=Beng}}
+* Bengali: {{t|bn|মার্কিন যুক্তরাষ্ট্র|tr=markin juktôrashţrô|sc=Beng}}
 * Bosnian: {{t-|bs|Sjedinjene Američke Države|f|p}}, {{t-|bs|Amerika|f}}, {{t-|bs|SAD}}
 * [[Breton]]: {{t|br|Stadoù-Unanet Amerika|f|p|xs=Breton}}, {{t-|br|SUA|xs=Breton}}
 * Bulgarian: {{t|bg|Съединени Американски Щати|m|p|tr=Sǎedinéni Amerikánski Štáti}}, {{t|bg|САЩ|m|p|tr=sašt}}
@@ -31,7 +31,7 @@
 *: Mandarin: {{t|cmn|美利堅合眾國|sc=Hani}}, {{t-|cmn|美利坚合众国|tr=[[Měilìjiān Hézhòngguó]]|sc=Hani}}, {{t-|cmn|美國|sc=Hani}}, {{t-|cmn|美国|tr=[[Měiguó]]|sc=Hani}}, {{t-|cmn|美|tr=[[Měi|Měi-]]|sc=Hani}} (''abbreviation'')
 *: Minnan: {{t+|nan|Bí-kok|xs=Min Nan}}
 * Croatian: {{t+|hr|Sjedinjene Američke Države|f|p}}
-* Czech: {{t-|cs|Spojené státy americké}}, {{t-|cs|Spojené státy}}
+* Czech: {{t-|cs|Spojené státy americké|m|p}}, {{t-|cs|Spojené státy|m|p}}
 * Danish: {{t|da|Amerikas Forenede Stater}}, {{t|da|Forenede Stater}}
 * Dutch: {{t+|nl|Verenigde Staten van Amerika|f|p}}, {{t+|nl|Verenigde Staten}}, {{t-|nl|VS}}
 * [[Eastern Keres]]: {{tø|kee|'Amelika-hui-pu-'ia}}
@@ -43,11 +43,11 @@
 * Georgian: {{t-|ka|ამერიკის შეერთებული შტატები|tr=amerikis šeert'ebuli štatebi|sc=Geor|xs=Georgian}}
 * German: {{t+|de|Vereinigte Staaten von Amerika|m|p}}, {{qualifier|short form}} {{t+|de|Vereinigten Staaten|m|p}}, {{t+|de|USA|m|p}} or {{f|s}}
 * Greek: {{t+|el|Ηνωμένες Πολιτείες της Αμερικής|f|p|tr=Inoménes Politeíes tis Amerikís}} (official), ''short forms:'' {{t-|el|Ηνωμένες Πολιτείες Αμερικής|f|p|tr=Inoménes Politeíes Amerikís}}, {{t+|el|Ηνωμένες Πολιτείες|f|p|tr=Inoménes Politeíes}}, {{t+|el|ΗΠΑ|f|p|tr=IPA}} (USA)
-* [[Gujarati]]: [[સંયુકત રાજ્ય અમેરિકા]], {{t|gu|સંયુકત રાજ્ય અમેરિકા|tr=sanyukat rājya amērikā|sc=Gujr}}
+* [[Gujarati]]: {{t|gu|સંયુકત રાજ્ય અમેરિકા|tr=sanyukat rājya amērikā|sc=Gujr}}
 * Hawaiian: {{tø|haw|'Amelika Huipū'ia}}
 * Hebrew: {{t|he|ארצות הברית של אמריקה|tr=Artsot ha-Brit shel Amerika}}, ''short:'' {{t|he|ארצות הברית|tr=Artsot ha-Brit}}, ''abbr.:'' {{t-|he|ארה״ב|tr=ARH-B}}
 * {{trreq|hil}}
-* Hindi: {{t-|hi|संयुक्त राज्य अमरीका|tr=Sa.nyukta Rājya Amrīkā|xs=Hindi}}, {{t-|hi|संयुक्त राष्ट्र अमरीका|tr=Sa.nyukta Raštra Amrīkā|xs=Hindi}}
+* Hindi: {{t-|hi|संयुक्त राज्य अमरीका|tr=sanyukta rājya amrīkā|xs=Hindi}}, {{t-|hi|संयुक्त राष्ट्र अमरीका|tr=sanyukta rāṣṭra amrīkā|xs=Hindi}}
 * Hungarian: {{t+|hu|Amerikai Egyesült Államok}}, {{t+|hu|Egyesült Államok}}, {{t+|hu|USA}}
 * Indonesian: {{t-|id|Amerika Serikat|xs=Indonesian}}
 * [[Interlingua]]: [[Statos Unite de America]]
@@ -55,15 +55,15 @@
 * Italian: {{t+|it|Stati Uniti d'America|m|p}}, (''short form'') {{t+|it|Stati Uniti|m|p}}, {{t-|it|SUA}}
 * Japanese: {{t+|ja|米国|tr=べいこく, Béikoku}}, {{t+|ja|アメリカ合衆国|tr=アメリカがっしゅうこく, Amerika Gasshūkoku}}, {{t+|ja|米|tr=べい, Bei-}} (''abbreviation''), {{t|ja|アメリカ|tr=Amerika|sc=Jpan}}
 * [[Kannada]]: {{t|kn|ಅಮೇರಿಕ ಸಂಯುಕ್ತ ಸಂಸ್ಥಾನ|tr=amērik sanyukta sansthān|sc=Knda}}
-* Kazakh: [[Америка Құрама Штаттары]], {{t|kk|Америка Құрама Штаттары|tr=amerika Qurama Ştattarı|sc=Cyrl}}
-* [[Khmer]]: {{Khmr|[[សហរដ្ឋអាមេរិក]]}} (sahā rōŭt āmērik)
-* Korean: [[미국]]/[[美國]] (Miguk), [[아메리카 합중국]] (Amerika Hapjungguk), {{t|ko|미국|tr=Miguk|sc=Kore}}, {{t|ko|美國|sc=Kore}}, {{t|ko|아메리카 합중국|tr=Amerika Hapjungguk|sc=Kore}}, {{t|ko|미합중국|tr=Mihapjungguk|sc=Kore}}, {{t|ko|美合衆國|sc=Kore}}
-* [[Kyrgyz]]: [[Америка Кошмо Штаттары]] (Amerika Koşmo Ştattarı)
+* Kazakh: {{t|kk|Америка Құрама Штаттары|tr=Amerika Qurama Ştattarı|sc=Cyrl}}
+* [[Khmer]]: {{t|km|សហរដ្ឋអាមេរិក|tr=sahā rōŭt āmērik|sc=Khmr}}
+* Korean: {{t|ko|미국|tr=Miguk|sc=Kore}} ({{t|ko|美國|sc=Kore}}), {{t|ko|아메리카 합중국|tr=Amerika Hapjungguk|sc=Kore}}, {{t|ko|미합중국|tr=Mihapjungguk|sc=Kore}} ({{t|ko|美合衆國|sc=Kore}})
+* [[Kyrgyz]]: {{t|ky|Америка Кошмо Штаттары|tr=Amerika Koşmo Ştattarı|sc=Cyrl}}
 * [[Lakota]]: {{tø|lkt|Mílahaŋska Tȟamákȟočhe}}
 * [[Lao]]: {{t-|lo|ສະຫະລັດອະເມລິກາ|tr=saha lat 'ameelikaa|sc=Laoo|xs=Lao}}
+{{trans-mid}}
 * [[Latgalian]]: {{tø|ltg|Amerikys Saškiertuos Vaļsteibys}}, {{tø|ltg|ASV}}
 * Latin: {{t|la|Respublicae Unitae Americae}}, {{t|la|Status Uniti Americae}}, {{t|la|Civitates Foederatae Americae}}
-{{trans-mid}}
 * Latvian: {{t-|lv|Amerikas Savienotās Valstis|xs=Latvian}}, {{t-|lv|ASV|xs=Latvian}}
 * {{trreq|lzz}}
 * Lithuanian: {{t+|lt|Jungtinės Amerikos Valstijos|xs=Lithuanian}}, {{t+|lt|JAV|xs=Lithuanian}}
@@ -74,21 +74,21 @@
 * [[Marathi]]: {{t|mr|अमेरिकेची संयुक्त संस्थाने|tr=amerikecī sanyukta sansthāne|sc=Deva}}
 * Mongolian: {{t|mn|Америкийн Нэгдсэн Улс|tr=Amerikiyn Negdsen Uls|sc=Cyrl|xs=Mongolian}}
 * Navajo: {{tø|nv|Wááshindoon bikéyah ałhidadiidzooígíí}}
-* Nepali: [[संयुक्त राज्य अमेरिका]] (Sa.nyukta Rājya Amerīkā), {{t|ne|संयुक्त राज्य अमेरिका|tr=sanyukta rājya amerikā|sc=Deva}}
+* Nepali: {{t|ne|संयुक्त राज्य अमेरिका|tr=sanyukta rājya amerikā|sc=Deva}}
 * [[Northern Sami]]: {{tø|se|Amerihká ovttastuvvan stáhtat}}
 * Norwegian: {{t+|no|Amerikas forente stater}}, {{t|no|De forente stater}}
 * [[Palauan]]: [[Merikel]]
-* Persian: {{fa-Arab|[[ایالات متحده آمریکا|ایالات متحدهٔ آمریکا]]}} (ayâlât-e motahideh âmrika), {{t|fa|ایالات متحدهٔ آمریکا|tr=Eyâlât-e Mottahede-ye Âmrikâ|sc=fa-Arab}}
+* Persian: {{t|fa|ایالات متحده آمریکا|tr=Eyâlât-e Mottahede-ye Âmrikâ|alt=ایالات متحدۀ آمریکا|sc=fa-Arab}}
 * Polish: {{t-|pl|Stany Zjednoczone Ameryki|m|p}}, {{t-|pl|Stany Zjednoczone Ameryki Północnej}}, ''short:'' {{t+|pl|Stany Zjednoczone}}, ''colloquial:'' {{t|pl|Stany}}, {{t+|pl|USA}}
 * Portuguese: {{t+|pt|Estados Unidos da América|m|p}}, ''short:'' {{t+|pt|Estados Unidos|m|p}}, {{t+|pt|EUA}}
-* [[Punjabi]]: [[ਸੰਯੁਕਤ ਰਾਜ ਅਮਰੀਕਾ]], {{t|pa|ਸੰਯੁਕਤ ਰਾਜ ਅਮਰੀਕਾ|tr=sayukat rāj amrīkā|sc=Guru}}
+* [[Punjabi]]: {{t|pa|ਸੰਯੁਕਤ ਰਾਜ ਅਮਰੀਕਾ|tr=sayukat rāj amrīkā|sc=Guru}}
 * Romanian: {{t+|ro|Statele Unite ale Americii|f|p}}, {{t|ro|SUA}}, {{t|ro|Statele Unite|n|p}}
 * [[Romansch]]: {{t|rm|Stadis Unids da l'America|m}}
 * Russian: {{t+|ru|Соединённые Штаты Америки|m|p|tr=Sojedinjónnyje Štáty Amériki}}, {{t+|ru|США|m|p|tr=sɛ-šɛ-á}}
 * [[Scottish Gaelic]]: Na [[Stàitean Aonaichte]] {{f|p}}, Na [[Stàitean Aonaichte na h-Aimeireaga]] {{f|p}}
-* Serbian:
-*: Cyrillic: {{t-|sr|Сједињене Америчке Државе|f|p|sc=Cyrl}}, {{t-|sr|САД|sc=Cyrl}}
-*: Roman: [[Sjedinjene Američke Države]] {{f|p}}, [[SAD]]
+* Serbo-Croatian:
+*: Cyrillic: {{t|sh|Сједињене Америчке Државе|f|p|sc=Cyrl}}, {{t|sh|САД|f|p|sc=Cyrl}}
+*: Roman: {{t|sh|Sjedinjene Američke Države|f|p}}, {{t|sh|SAD|f|p}}
 * [[Sicilian]]: [[Stati Uniti dâ Mèrica]] {{m|p}}
 * Slovak: {{t|sk|Spojené Štáty Americké|m|p}}, {{t-|sk|USA}}
 * Slovene: {{t|sl|Združene države Amerike|f|p}}, {{t|sl|Združene države|f|p}} (short form), {{t|sl|ZDA}}
@@ -96,16 +96,16 @@
 * Spanish: {{t+|es|Estados Unidos de América|m|s}}, {{qualifier|short form}} {{t+|es|Estados Unidos|m|s}}, {{qualifier|abbreviation}} {{t-|es|EE. UU.|m|s}}, {{t-|es|EEUU}}
 * Swedish: {{t|sv|Amerikas förenta stater}}, {{t|sv|Förenta staterna}}
 * [[Tagalog]]: {{t|tl|Estados Unidos ng Amerika|xs=Tagalog}}
-* [[Tajik]]: [[Иёлоти Муттаҳидаи Амриқо]] (Iyoloti Muttaħidai Amriqo), {{t|tg|Иёлоти Муттаҳидаи Амриқо|tr=Iyoloti Muttahidai Amriqo|sc=Cyrl}}
-* [[Tamil]]: {{t|ta|அமெரிக்க ஐக்கிய நாடு|sc=Taml}}, {{t|ta|அமெரிக்க ஐக்கிய நாடு|tr=amerikka aikkiya nāṭu|sc=Taml}}
-* [[Telugu]]: [[అమెరికా సంయుక్త రాష్ట్రములు]], {{t|te|అమెరికా సంయుక్త రాష్ట్రములు|tr=amerikā sanyukta rāṣṭramulu|sc=Telu}}
+* [[Tajik]]: {{t|tg|Иёлоти Муттаҳидаи Амриқо|tr=Iyoloti Muttahidai Amriqo|sc=Cyrl}}
+* [[Tamil]]: {{t|ta|அமெரிக்க ஐக்கிய நாடு|tr=amerikka aikkiya nāṭu|sc=Taml}}
+* [[Telugu]]: {{t|te|అమెరికా సంయుక్త రాష్ట్రములు|tr=amerikā sanyukta rāṣṭramulu|sc=Telu}}
 * Thai: {{Thai|[[สหรัฐอเมริกา]]}} (sàhà rát àmayrígaa), {{t|th|อเมริกา|tr=àmayrígaa}}, {{t|th|ประเทศสหรัฐอเมริกา|tr=bpràtêt sàhà rát àmayrígaa}}
 * Turkish: {{t+|tr|Amerika Birleşik Devletleri}}, {{t-|tr|Birleşik Devletler}}, {{t+|tr|ABD}}, {{t+|tr|Amerika}}
 * [[Turkmen]]: {{t|tk|Amerikanyň Birleşen Ştatlary}}
 * Ukrainian: {{t|uk|Сполучені Штати Америки|m|p|tr=Spolúčeni Štáty Améryki|xs=Ukrainian}}, {{t+|uk|США|m|p|tr=se-še-á|xs=Ukrainian}}
 * Urdu: {{t|ur|ریاستہائے متحدہ امریکہ|tr=riyaastahaa'e muttaHidah amriikaa|xs=Urdu}}
 * [[Uyghur]]: {{ug-Arab|[[ئامېرىكا قوشما شتاتلىرى]]}} (’amerika quşma ştatleri)
-* Uzbek: [[Amerika Qo'shma Shtatlari]], {{t|uz|Amerika Qo'shma Shtatlari}}
+* Uzbek: {{t|uz|Amerika Qo'shma Shtatlari}}
 * Vietnamese: {{t+|vi|Hoa Kỳ|xs=Vietnamese}}, {{t|vi|Nước Mỹ|xs=Vietnamese}}, {{t|vi|Mỹ Quốc|xs=Vietnamese}} (''short forms''); {{t|vi|Hợp Chủng Quốc Hoa Kỳ|xs=Vietnamese}} (''long form''); {{t-|vi|HK|xs=Vietnamese}} (''abbr.''), {{t+|vi|Mỹ|xs=Vietnamese}} (''abbr.'')
 * [[Volapük]]: {{t|vo|Lamerikän}}, {{t|vo|Tats-Pebalöl Nolüda-Meropa}}, {{t|vo|Tats-Pebalöl Meropa}}, {{t|vo|Tats-Pebalöl}}
 * [[Võro]]: [[Ameeriga Ütisriigiq]]
