/* Noun */ usexes for non-maths stuff <curve#13914416>

--- a/en/c/curve.7392.wikitext
+++ b/en/c/curve.7392.wikitext
@@ -25,7 +25,9 @@ From {{etyl|la}} {{term|curvus||lang=la|bent, curved}}
 {{en-noun}}
 
 # A gentle [[bend]], such as in a road.
+#: ''You should slow down when approaching a '''curve'''.''
 # A simple figure containing no [[straight]] portions and no [[angle]]s; a [[curved]] [[line]].
+#: ''She scribbled a '''curve''' on the paper.''
 # {{analytic geometry}} A [[continuous map]] from a one-[[dimensional]] [[space]] to a multidimensional space.
 # {{geometry}} A one-dimensional figure of [[non-zero]] length; the [[graph]] of a continuous map from a one-dimensional space.
 # {{algebraic geometry}} An [[algebraic curve]]; a [[polynomial]] [[relation]] of the planar coordinates.
