--- a/en/f/fight.6879.wikitext
+++ b/en/f/fight.6879.wikitext
@@ -48,7 +48,7 @@ From {{etyl|enm}} {{term|fighten|lang=enm}}, from {{etyl|ang}} {{term|feohtan||t
 * Armenian: {{t-|hy|կռվել|tr=kṙvel}}
 * [[Basque]]: {{t|eu|borrokatu|xs=Basque}}, {{t|eu|borroka egin|xs=Basque}}
 * Bulgarian: [[боря се]]
-* Burmese: {{t|my|ရန်ဖြစ်|tr=jan hpji'|sc=Mymr}}
+* Burmese: {{t|my|ရန်ဖြစ်|tr=yan-hpyit|sc=Mymr}}
 * [[Catalan]]: {{t|ca|lluitar}}, {{t|ca|barallar-se}}
 * Chinese: {{zh-tsp|鬥爭|斗争|dòuzhēng}}, {{zh-tsp|戰鬥|战斗|zhàndòu}}, {{zh-tsp|奮鬥|奋斗|fèndòu}}
 * Croatian: {{t-|hr|boriti}}
