--- a/en/f/fight.6879.wikitext
+++ b/en/f/fight.6879.wikitext
@@ -351,6 +351,7 @@ From {{etyl|ang}} ''[[feoht]]'', from the verb. Corresponding to Dutch ''[[gevec
 * Dutch: {{t+|nl|strijd|m}}
 * Finnish: {{t+|fi|taistelu}}
 * French: {{t+|fr|combativité|f}}
+* German: {{t|de|Streit|m}}
 * Hebrew: {{t+|he|מאבק|m|tr=ma`avák}}
 {{trans-mid}}
 * Norwegian: {{t+|no|kamp}}
