t+my:[[ညှပ်]] t-balance ([[WT:EDIT|Assisted]]) <cut#13921086>

--- a/en/c/cut.6843.wikitext
+++ b/en/c/cut.6843.wikitext
@@ -409,6 +409,7 @@ From {{etyl|enm}} {{term|cutten|cutten, kytten|to cut|lang=enm}}, (compare {{ety
 * Armenian: {{t|hy|կտրատել|tr=ktratel}}
 * Bengali: {{t-|bn|কাটা|sc=Beng|xs=Bengali}}
 * Bulgarian: {{t+|bg|режа}},  {{t+|bg|сека}},  {{t|bg|разсичам}}
+* Burmese: {{t|my|ညှပ်|tr=hnyat|sc=Mymr}}
 * [[Catalan]]: {{t+|ca|tallar}}
 * Chinese: {{t-|cmn|切|tr=qiē|sc=Hani}}
 * Danish: {{t|da|udskære}}
@@ -417,8 +418,8 @@ From {{etyl|enm}} {{term|cutten|cutten, kytten|to cut|lang=enm}}, (compare {{ety
 * Finnish: {{t+|fi|leikata}}
 * French: {{t+|fr|couper}}
 *: [[Old French]]: {{tø|fro|colper}}, {{tø|fro|couper}}, {{tø|fro|coper}}
-* [[Galician]]: {{t+|gl|cortar|xs=Galician}}
 {{trans-mid}}
+* [[Galician]]: {{t+|gl|cortar|xs=Galician}}
 * German: {{t+|de|schneiden}}
 * Hebrew: {{t+|he|חתך|tr=khatákh}}
 * Icelandic: {{qualifier|with a knife}} {{t+|is|skera}},  {{qualifier|with scissors}} {{t-|is|klippa}}
