--- a/en/g/Germany.2103.wikitext
+++ b/en/g/Germany.2103.wikitext
@@ -109,6 +109,7 @@ From {{etyl|la}} {{term|Germania|lang=la}}, likely of Gallic origin
 * Serbo-Croatian:
 *: Cyrillic: {{t|sh|Немачка|f|sc=Cyrl}}
 *: Roman: {{t|sh|Nemačka|f}}
+* [[Silesian]]: {{tø|szl|Mjymcy}}
 * [[Sinhalese]]: {{t|si|ජර්මනිය|tr=jarmaniya|sc=Sinh}}
 * Slovak: {{t|sk|Nemecko|n}}
 * Slovene: {{t+|sl|Nemčija|f}}
