t+be:[[Нямеччына]] ([[WT:EDIT|Assisted]]) <Germany#13926490>

--- a/en/g/Germany.2103.wikitext
+++ b/en/g/Germany.2103.wikitext
@@ -33,7 +33,7 @@ From {{etyl|la}} {{term|Germania|lang=la}}, likely of Gallic origin
 * [[Azeri]]: {{t+|az|Almaniya|xs=Azeri}}
 * [[Basque]]: {{t+|eu|Alemania|xs=Basque}}
 * [[Bavarian]]: {{tø|bar|Deitschland}}
-* Belarusian: {{t|be|Германія|f|tr=Hermánija|xs=Belarusian}}
+* Belarusian: {{t|be|Германія|f|tr=Hermánija|xs=Belarusian}}, {{t|be|Нямеччына|f|tr=Njaméččyna|sc=Cyrl}}
 * Bengali: {{t-|bn|জার্মানি|tr=jôrmôni}}
 * Bosnian: {{t-|bs|Njemačka|f}}
 * [[Breton]]: [[Alamagn]]
