t+tk:[[Germaniýa]] t-balance t+uz:[[Olmoniya]] t+ky:[[Германия]] t+ne:[[जर्मनी]] t+mr:[[जर्मनी]] t+pa:[[ਜਰਮਨੀ]] t+ps:[[آلمان]] ([[WT:EDIT|Assisted]]) <Germany#13926506>

--- a/en/g/Germany.2103.wikitext
+++ b/en/g/Germany.2103.wikitext
@@ -73,25 +73,28 @@ From {{etyl|la}} {{term|Germania|lang=la}}, likely of Gallic origin
 * Kazakh: {{t|kk|Германия|tr=Germaniya|sc=Cyrl}}
 * [[Khmer]]: {{t|km|​អាល្លឺម៉ង់|tr=āleumong|sc=Khmr}}
 * Korean: {{t+|ko|독일|tr=Dogil|sc=Hang}} ({{t|ko|獨逸|sc=Hani}}); {{t|ko|도이췰란드|tr=Doichwillandeu|sc=Hang}} (''North Korea'')
+* [[Kyrgyz]]: {{t|ky|Германия|tr=Germaniya|sc=Cyrl}}
 * [[Lao]]: {{t|lo|ປະເທດເຢັຽລະມັນ|sc=Laoo}}
 * [[Latgalian]]: {{tø|ltg|Vuoceja|f}}
 * Latin: {{t+|la|Germania|f}}
 * Latvian: {{t+|lv|Vācija|f|xs=Latvian}}
 * Lithuanian: {{t+|lt|Vokietija|f|xs=Lithuanian}}
-{{trans-mid}}
 * [[Livonian]]: [[Saksāmō]]
 * [[Low German]]: {{t|nds|Düütschland|n}}, {{qualifier|Plauttdietsch:}} {{t|nds|Dietschlaund|n}}
 * [[Luhya]]: {{tø|luy|Jamani}}
 * [[Luxembourgish]]: [[Däitschland]] {{n}}
+{{trans-mid}}
 * [[Macedonian]]: {{t+|mk|Германија|f|tr=Germánija}}
 * Malay: {{t-|ms|Jerman|xs=Malay}}
 * [[Malayalam]]: {{t|ml|ജര്മനി|tr=jarmani|sc=Mlym|xs=Malayalam}}
 * Maltese: il-[[Ġermanja]] {{f}}
 * [[Manx]]: {{t|gv|Giarmaan|f}}
+* [[Marathi]]: {{t|mr|जर्मनी|tr=jarmanī|sc=Deva}}
 * [[Marshallese]]: {{t|mh|Jāmne}}
 * Mongolian: {{t-|mn|Герман|tr=Germán|sc=Cyrl|xs=Mongolian}}
 * [[Nahuatl]]: {{t|nah|Teutontlālpan}}
 * Navajo: {{tø|nv|Béésh Bichʼahii bikéyah}}
+* Nepali: {{t|ne|जर्मनी|tr=jarmanī|sc=Deva}}
 * [[North Frisian]]:
 *: Amrum: {{tø|frr|Sjiisklun}}
 *: Mooring: {{tø|frr|Tjüschlönj}}
@@ -99,9 +102,11 @@ From {{etyl|la}} {{term|Germania|lang=la}}, likely of Gallic origin
 * [[Old English]]: {{t-|ang|Þeodiscland|n|alt=Þēodiscland|xs=Old English}}
 * [[Old French]]: {{tø|fro|Alemaigne|f}}
 * [[Old Provençal]]: {{tø|pro|Alamagna}}
+* [[Pashto]]: {{t|ps|آلمان|tr=Âlmân|sc=ps-Arab}}
 * Persian: {{t+|fa|آلمان|tr=Âlmân|xs=Persian}}
 * Polish: {{t+|pl|Niemcy|f|p}}
 * Portuguese: {{t+|pt|Alemanha|f}}
+* [[Punjabi]]: {{t|pa|ਜਰਮਨੀ|tr=jarmanī|sc=Guru}}
 * [[Quechua]]: {{t-|qu|Alimanya|xs=Quechua}}
 * Romanian: {{t+|ro|Germania|f}}
 * Russian: {{t+|ru|Германия|f|tr=Germánija}}
@@ -125,9 +130,11 @@ From {{etyl|la}} {{term|Germania|lang=la}}, likely of Gallic origin
 * [[Telugu]]: {{t|te|జర్మని|tr=jarmani}}
 * Thai: {{t|th|ประเทศเยอรมัน|tr=bpràtêt yerráman}}, {{t|th|เยอรมนี|tr=yerromnee}}, {{t|th|เยอรมัน|tr=yerráman}}
 * Turkish: {{t+|tr|Almanya}}
+* [[Turkmen]]: {{t|tk|Germaniýa}}
 * Ukrainian: {{t+|uk|Німеччина|f|tr=Niméččyna|xs=Ukrainian}}
 * Urdu: {{t|ur|جرمنی|m|tr=jarmanī|sc=ur-Arab}}
 * [[Uyghur]]: {{t-|ug|گېرمانىيە|tr=gérmaniye|sc=ug-Arab|xs=Uyghur}}
+* Uzbek: {{t|uz|Olmoniya}}
 * Vietnamese: {{t|vi|nước Đức|xs=Vietnamese}}, {{t+|vi|Đức|xs=Vietnamese}} ({{t-|vi|德|sc=Hani|xs=Vietnamese}})
 * [[Volapük]]: {{t|vo|Deutän}}, {{qualifier|obsolete}} {{t|vo|Deut}}
 * [[Võro]]: [[S'aksamaa]]
