/* Translations */ fi <felt#13930340>

--- a/en/f/felt.6877.wikitext
+++ b/en/f/felt.6877.wikitext
@@ -32,7 +32,7 @@
 * Danish: {{t-|da|filt|n}}
 * Dutch: {{t+|nl|vilt|n}}
 * Esperanto: {{t-|eo|felto|xs=Esperanto}}
-* Finnish: [[huopa]] (1), {{t|fi|huopa}}
+* Finnish: {{t|fi|huopa}}
 * French: {{t+|fr|feutre|m}}, {{t+|fr|feutrine|f}}
 * German: {{t+|de|Filz|n}}
 {{trans-mid}}
