--- a/en/p/port.1843.wikitext
+++ b/en/p/port.1843.wikitext
@@ -383,7 +383,7 @@ From late {{etyl|non|da}} {{term|port|lang=non}}, {{term|portr|lang=non}}, from 
 # [[tune]]
 #* ''Is {{l|ga|buaine}} '''port''' ná {{l|ga|glór}} na n-éan; is buaine {{l|ga|focal}} ná {{l|ga|toice}} an t{{l|ga|saoil}}.''
 #** A tune is more lasting than the song of birds; a word is more lasting than the wealth of the world.
-# [[jig]]
+# [[jig]] {{qualifier|dance}}
 
 ====Declension====
 {{ga-noun-m1|p|ort|oirt}}
