--- a/en/p/port.1843.wikitext
+++ b/en/p/port.1843.wikitext
@@ -394,7 +394,7 @@ From late {{etyl|non|da}} {{term|port|lang=non}}, {{term|portr|lang=non}}, from 
 ===Noun 2===
 {{infl|ga|noun|g=m}}
 
-# [[landing]]-place]]
+# [[landing]]-place
 # [[harbor]], [[port]]
 # [[bank]] {{qualifier|of river, etc.}}
 # [[mound]], [[embankment]]
