t+ms:[[muntahan]] ([[WT:EDIT|Assisted]]) <vomit#13952210>

--- a/en/v/vomit.8434.wikitext
+++ b/en/v/vomit.8434.wikitext
@@ -96,6 +96,7 @@ From {{etyl|enm}} {{term|vomiten|lang=enm}}, from {{etyl|la}} {{term|vomitare|vo
 * Latvian: {{t|lv|vēmekļi|m|p}}
 * Lithuanian: {{t|lt|vėmalai|p|xs=Lithuanian}}
 * [[Macedonian]]: {{t|mk|повраќаница|f|tr=povraḱánica}},  {{t|mk|блујавица|f|tr=blujávica}}
+* Malay: {{t|ms|muntahan}}
 * Maltese: [[rimettar]]
 * Norwegian: {{t+|no|oppkast|n}}, {{t+|no|spy|n}}
 * Polish: [[wymiociony]] {{f}}
