t+lb:[[kaschten]] ([[WT:EDIT|Assisted]]) <cost#13961136>

--- a/en/c/cost.6840.wikitext
+++ b/en/c/cost.6840.wikitext
@@ -157,6 +157,7 @@ The past tense and past participle is ''cost'' in the sense of "this computer ''
 * [[Kannada]]: {{t+|kn|ಬೀರು|tr=bīru|sc=Knda|xs=Kannada}}
 * Latin: {{t|la|consto}}, {{t|la|valeo}}
 * Latvian: {{t|lv|maksāt}}
+* [[Luxembourgish]]: {{t|lb|kaschten}}
 * Polish: {{t+|pl|kosztować}}
 * Portuguese: {{t+|pt|custar}}
 * Romanian: {{t+|ro|costa}}, {{t-|ro|prețui}}
