--- a/en/f/felt.6877.wikitext
+++ b/en/f/felt.6877.wikitext
@@ -87,12 +87,19 @@
 * {{ttbc|sv}}: [[filta]]
 
 ===Etymology 2===
-See ''[[feel]]''.
+{{etyl|ang}} {{term|feled|fēled}}, corresponding to {{suffix|feel|ed}}.
 
 ====Verb====
 '''felt'''
 
 # {{past of|feel}}
+
+====Adjective====
+{{en-adj}}
+
+# That has been [[experienced]] or [[perceived]].
+#*'''2009''', {{w|Diarmaid MacCulloch}}, ''A History of Christianity'', Penguin 2010, p. 257:
+#*:Conversions to Islam can therefore be a deeply '''felt''' aesthetic experience that rarely occurs in Christian accounts of conversion, which are generally the source rather than the result of a Christian experience of beauty.
 
 ====Statistics====
 * {{rank|best|word|light|248|felt|since|use|used}}
