--- a/en/是/是.16983.wikitext
+++ b/en/是/是.16983.wikitext
@@ -65,8 +65,8 @@
 {{cmn-verb|ts|pin=shì|pint=shi4|rs=日05}}
 
 # [[is]]; to [[be]]
-#: [[Thames河]][[是]][[英国]][[第二]][[长]][[的]][[河流]]。
-#: [[Thames Hé]] [[shì]] [[Yīngguó]] [[dì-èr]] [[cháng]] [[de]] [[héliú]].
+#: {{Hans|[[泰晤士河]][[是]][[英国]][[第二]][[长]][[的]][[河流]]。}}
+#: [[Tàiwùshì Hé]] [[shì]] [[Yīngguó]] [[dì-èr]] [[cháng]] [[de]] [[héliú]].
 #:: The River Thames is the second longest river in the UK.
 
 [[Category:Mandarin entries with audio links]]
