--- a/en/c/cost.6840.wikitext
+++ b/en/c/cost.6840.wikitext
@@ -128,6 +128,7 @@ From {{etyl|fro}} {{term|coster|lang=fro}} (modern: {{term|coûter|lang=fr}}).
 {{trans-bottom}}
 
 ===Etymology 3===
+From {{etyl|enm}} {{term|costen|lang=enm}}, from {{etyl|fro}} {{term|coster|lang=fro}}, {{term|couster||to cost|lang=fro}}, from {{etyl|ML.}} {{term|costare|lang=la}}, from {{etyl|la}} {{term|constare||stand together, stand at, cost|lang=la}}, from {{term|com-|lang=la}} + {{term|stare||stand|lang=la}}.
 
 ====Verb====
 {{en-verb|costs|costing|'''[[cost]]''' or '''[[costed]]'''}} See Usage notes.
