--- a/en/c/cost.6840.wikitext
+++ b/en/c/cost.6840.wikitext
@@ -17,6 +17,9 @@ From {{etyl|enm}} {{term|cost|lang=enm}}, from {{etyl|non}} {{term|kostr||choice
 #: ''at all '''costs''' {{gloss|"by all means"}}''
 # [[quality|Quality]]; [[condition]]; [[property]]; [[value]]; [[worth]].
 
+=====Derived terms=====
+* {{l|en|at all costs}}
+
 ===Etymology 2===
 From {{etyl|fro}} {{term|coster|lang=fro}} (modern: {{term|coûter|lang=fr}}).
 
