--- a/en/c/cost.6840.wikitext
+++ b/en/c/cost.6840.wikitext
@@ -21,7 +21,7 @@ From {{etyl|enm}} {{term|cost|lang=enm}}, from {{etyl|non}} {{term|kostr||choice
 * {{l|en|at all costs}}
 
 ===Etymology 2===
-From {{etyl|enm}} {{term|cost|lang=enm}}, {{term|coust|lang=enm}}, from {{term|costen||to cost|lang=enm}}, see above.
+From {{etyl|enm}} {{term|cost|lang=enm}}, {{term|coust|lang=enm}}, from {{term|costen||to cost|lang=enm}}, see below.
 
 ====Noun====
 {{wikipedia}}
